@@ -17,10 +17,10 @@
 package org.apache.jackrabbit.oak.spi.security.authentication.external.basic;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
+
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
 import org.jetbrains.annotations.NotNull;
@@ -51,16 +51,16 @@ public class DefaultSyncConfigTest {
         assertSame(authorizableConfig, authorizableConfig.setAutoMembership());
         assertTrue(authorizableConfig.getAutoMembership().isEmpty());
 
-        assertEquals(ImmutableSet.of("gr1", "gr2"), authorizableConfig.setAutoMembership("gr1", "gr2").getAutoMembership());
-        assertEquals(ImmutableSet.of("gr"), authorizableConfig.setAutoMembership("", " gr ", null, "").getAutoMembership());
+        assertEquals(Set.of("gr1", "gr2"), authorizableConfig.setAutoMembership("gr1", "gr2").getAutoMembership());
+        assertEquals(Set.of("gr"), authorizableConfig.setAutoMembership("", " gr ", null, "").getAutoMembership());
 
         Map<String, String> mapping = authorizableConfig.getPropertyMapping();
         assertNotNull(mapping);
         assertTrue(mapping.isEmpty());
 
-        assertSame(authorizableConfig, authorizableConfig.setPropertyMapping(ImmutableMap.of("a", "b")));
-        assertEquals(ImmutableMap.of("a", "b"), authorizableConfig.getPropertyMapping());
-        assertEquals(ImmutableMap.of(), authorizableConfig.setPropertyMapping(null).getPropertyMapping());
+        assertSame(authorizableConfig, authorizableConfig.setPropertyMapping(Map.of("a", "b")));
+        assertEquals(Map.of("a", "b"), authorizableConfig.getPropertyMapping());
+        assertEquals(Map.of(), authorizableConfig.setPropertyMapping(null).getPropertyMapping());
 
         assertEquals(0, authorizableConfig.getExpirationTime());
         assertSame(authorizableConfig, authorizableConfig.setExpirationTime(Long.MAX_VALUE));
@@ -139,8 +139,8 @@ public class DefaultSyncConfigTest {
 
     @Test
     public void testAutoMembership() {
-        Set<String> globalGroupIds = ImmutableSet.of("gr1", "gr2");
-        Set<String> configGroupIds = ImmutableSet.of("gr3", "gr4");
+        Set<String> globalGroupIds = Set.of("gr1", "gr2");
+        Set<String> configGroupIds = Set.of("gr3", "gr4");
         
         Group gr = mock(Group.class);
         User user = mock(User.class);
@@ -158,9 +158,9 @@ public class DefaultSyncConfigTest {
         // only global ids for getAutoMembership(Authorizable) as no specific config for 'gr'
         assertEquals(globalGroupIds, dscA.getAutoMembership(gr));
         // for 'user' the combine set of global and conditional config is returned
-        Set<String> expected = ImmutableSet.<String>builder()
-                .addAll(globalGroupIds)
-                .addAll(configGroupIds).build();
+        Set<String> expected = new HashSet<>();
+        expected.addAll(globalGroupIds);
+        expected.addAll(configGroupIds);
         assertEquals(expected, dscA.getAutoMembership(user));
     }
 }
