@@ -16,8 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.impl.principal;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.api.security.principal.GroupPrincipal;
 import org.apache.jackrabbit.api.security.principal.ItemBasedPrincipal;
 import org.apache.jackrabbit.api.security.principal.PrincipalManager;
@@ -29,6 +27,9 @@ import org.apache.jackrabbit.oak.api.QueryEngine;
 import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.ListUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
+import org.apache.jackrabbit.oak.commons.collections.StreamUtils;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
 import org.apache.jackrabbit.oak.plugins.tree.TreeAware;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalGroup;
@@ -57,6 +58,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
+import org.osgi.framework.ServiceReference;
 
 import static org.apache.jackrabbit.oak.spi.security.authentication.external.impl.ExternalIdentityConstants.REP_EXTERNAL_ID;
 import static org.junit.Assert.assertEquals;
@@ -70,6 +72,7 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.withSettings;
 
@@ -88,7 +91,7 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
     @NotNull
     Set<Principal> getExpectedGroupPrincipals(@NotNull String userId) throws Exception {
         if (syncConfig.user().getMembershipNestingDepth() == 1) {
-            return ImmutableSet.copyOf(idp.getUser(userId).getDeclaredGroups()).stream().map(externalIdentityRef -> {
+            return StreamUtils.toStream(idp.getUser(userId).getDeclaredGroups()).map(externalIdentityRef -> {
                 try {
                     return new PrincipalImpl(idp.getIdentity(externalIdentityRef).getPrincipalName());
                 } catch (ExternalIdentityException e) {
@@ -131,8 +134,32 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
         if (hasDynamicGroups()) {
             return Collections.emptySet();
         } else {
-            return ImmutableSet.of(new PrincipalImpl(principalName));
+            return Set.of(new PrincipalImpl(principalName));
         }
+    }
+
+    @Test
+    public void testProviderConstructor() {
+        //Created mainly to fulfill the coverage requirements
+        SyncConfigTracker emptySync = mock(SyncConfigTracker.class);
+        when(emptySync.getIdpNamesWithDynamicGroups()).thenReturn(Collections.emptySet());
+        when(emptySync.getServiceReferences()).thenReturn(new ServiceReference[0]);
+        ExternalGroupPrincipalProvider emptyIDPProvider = new ExternalGroupPrincipalProvider(root,
+                getUserManager(root),
+                getNamePathMapper(),
+                emptySync);
+
+        verify(emptySync).getIdpNamesWithDynamicGroups();
+
+        SyncConfigTracker syncWithDynGroups = mock(SyncConfigTracker.class);
+        when(syncWithDynGroups.getIdpNamesWithDynamicGroups()).thenReturn(Collections.singleton(idp.getName()));
+        when(syncWithDynGroups.getServiceReferences()).thenReturn(new ServiceReference[0]);
+        ExternalGroupPrincipalProvider providerWithIDPNames = new ExternalGroupPrincipalProvider(root,
+                getUserManager(root),
+                getNamePathMapper(),
+                syncWithDynGroups);
+
+        verify(syncWithDynGroups).getIdpNamesWithDynamicGroups();
     }
 
     @Test
@@ -187,7 +214,7 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
 
     @Test
     public void testGetPrincipalInheritedGroups() throws Exception {
-        ImmutableSet<ExternalIdentityRef> declared = ImmutableSet.copyOf(idp.getUser(USER_ID).getDeclaredGroups());
+        Set<ExternalIdentityRef> declared = SetUtils.toSet(idp.getUser(USER_ID).getDeclaredGroups());
 
         for (ExternalIdentityRef ref : declared) {
             for (ExternalIdentityRef inheritedGroupRef : idp.getIdentity(ref).getDeclaredGroups()) {
@@ -465,24 +492,20 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
     @Test
     public void testFindPrincipalsByHintTypeGroup() {
         Set<? extends Principal> expected = buildExpectedPrincipals("a");
-        Set<? extends Principal> res = ImmutableSet
-                .copyOf(principalProvider.findPrincipals("a", PrincipalManager.SEARCH_TYPE_GROUP));
+        Set<? extends Principal> res = SetUtils.toSet(principalProvider.findPrincipals("a", PrincipalManager.SEARCH_TYPE_GROUP));
         assertEquals(expected, res);
 
-        Set<? extends Principal> res2 = ImmutableSet
-                .copyOf(principalProvider.findPrincipals("a", false, PrincipalManager.SEARCH_TYPE_GROUP, 0, -1));
+        Set<? extends Principal> res2 = SetUtils.toSet(principalProvider.findPrincipals("a", false, PrincipalManager.SEARCH_TYPE_GROUP, 0, -1));
         assertEquals(expected, res2);
     }
 
     @Test
     public void testFindPrincipalsByHintTypeAll() {
         Set<? extends Principal> expected = buildExpectedPrincipals("a");
-        Set<? extends Principal> res = ImmutableSet
-                .copyOf(principalProvider.findPrincipals("a", PrincipalManager.SEARCH_TYPE_ALL));
+        Set<? extends Principal> res = SetUtils.toSet(principalProvider.findPrincipals("a", PrincipalManager.SEARCH_TYPE_ALL));
         assertEquals(expected, res);
 
-        Set<? extends Principal> res2 = ImmutableSet
-                .copyOf(principalProvider.findPrincipals("a", false, PrincipalManager.SEARCH_TYPE_ALL, 0, -1));
+        Set<? extends Principal> res2 = SetUtils.toSet(principalProvider.findPrincipals("a", false, PrincipalManager.SEARCH_TYPE_ALL, 0, -1));
         assertEquals(expected, res2);
     }
 
@@ -492,11 +515,9 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
         sync(externalUser);
 
         Set<? extends Principal> expected = buildExpectedPrincipals("_gr_u_");
-        Set<? extends Principal> res = ImmutableSet
-                .copyOf(principalProvider.findPrincipals("_", PrincipalManager.SEARCH_TYPE_ALL));
+        Set<? extends Principal> res = SetUtils.toSet(principalProvider.findPrincipals("_", PrincipalManager.SEARCH_TYPE_ALL));
         assertEquals(expected, res);
-        Set<? extends Principal> res2 = ImmutableSet
-                .copyOf(principalProvider.findPrincipals("_", false, PrincipalManager.SEARCH_TYPE_ALL, 0, -1));
+        Set<? extends Principal> res2 = SetUtils.toSet(principalProvider.findPrincipals("_", false, PrincipalManager.SEARCH_TYPE_ALL, 0, -1));
         assertEquals(expected, res2);
     }
 
@@ -506,10 +527,9 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
         sync(externalUser);
 
         Set<? extends Principal> expected = buildExpectedPrincipals("g%r%");
-        Set<? extends Principal> res = ImmutableSet.copyOf(principalProvider.findPrincipals("%", PrincipalManager.SEARCH_TYPE_ALL));
+        Set<? extends Principal> res = SetUtils.toSet(principalProvider.findPrincipals("%", PrincipalManager.SEARCH_TYPE_ALL));
         assertEquals(expected, res);
-        Set<? extends Principal> res2 = ImmutableSet
-                .copyOf(principalProvider.findPrincipals("%", false, PrincipalManager.SEARCH_TYPE_ALL, 0, -1));
+        Set<? extends Principal> res2 = SetUtils.toSet(principalProvider.findPrincipals("%", false, PrincipalManager.SEARCH_TYPE_ALL, 0, -1));
         assertEquals(expected, res2);
     }
 
@@ -521,23 +541,23 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
 
     @Test
     public void testFindPrincipalsByTypeGroup() throws Exception {
-        Set<? extends Principal> res = ImmutableSet.copyOf(principalProvider.findPrincipals(PrincipalManager.SEARCH_TYPE_GROUP));
+        Set<? extends Principal> res = SetUtils.toSet(principalProvider.findPrincipals(PrincipalManager.SEARCH_TYPE_GROUP));
         assertEquals(getExpectedAllSearchResult(USER_ID), res);
 
-        Set<? extends Principal> res2 = ImmutableSet.copyOf(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, 0, -1));
+        Set<? extends Principal> res2 = SetUtils.toSet(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, 0, -1));
         assertEquals(getExpectedAllSearchResult(USER_ID), res2);
     }
 
     @Test
     public void testFindPrincipalsByTypeAll() throws Exception {
-        Set<? extends Principal> res = ImmutableSet.copyOf(principalProvider.findPrincipals(PrincipalManager.SEARCH_TYPE_ALL));
+        Set<? extends Principal> res = SetUtils.toSet(principalProvider.findPrincipals(PrincipalManager.SEARCH_TYPE_ALL));
         assertEquals(getExpectedAllSearchResult(USER_ID), res);
     }
 
     @Test
     public void testFindPrincipalsFiltersDuplicates() throws Exception {
         ExternalGroup gr = idp.getGroup("a");
-        ExternalUser otherUser = new TestUser("anotherUser", ImmutableSet.of(gr.getExternalId()));
+        ExternalUser otherUser = new TestUser("anotherUser", Set.of(gr.getExternalId()));
         sync(otherUser);
 
         Set<Principal> expected = new HashSet<>();
@@ -550,10 +570,10 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
         }
 
         Iterator<? extends Principal> res = principalProvider.findPrincipals("a", PrincipalManager.SEARCH_TYPE_ALL);
-        assertEquals(expected, ImmutableSet.copyOf(res));
+        assertEquals(expected, SetUtils.toSet(res));
         Iterator<? extends Principal> res2 = principalProvider.findPrincipals("a", false,
                 PrincipalManager.SEARCH_TYPE_ALL, 0, -1);
-        assertEquals(expected, ImmutableSet.copyOf(res2));
+        assertEquals(expected, SetUtils.toSet(res2));
     }
 
     @Test
@@ -567,7 +587,7 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
                 return in.iterator();
             }
         };
-        List<Principal> out = ImmutableList.copyOf(p.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_ALL, 0, -1));
+        List<Principal> out = ListUtils.toList(p.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_ALL, 0, -1));
         Collections.sort(in, Comparator.comparing(Principal::getName));
         assertEquals(in, out);
     }
@@ -578,7 +598,7 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
 
         long offset = 2;
         long expectedSize = (all.size() <= offset) ? 0 : all.size()-offset;
-        Set<? extends Principal> result = ImmutableSet.copyOf(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, offset, -1));
+        Set<? extends Principal> result = SetUtils.toSet(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, offset, -1));
         assertEquals(expectedSize, result.size());
     }
 
@@ -586,7 +606,7 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
     public void testFindPrincipalsWithOffsetEqualsResultSize() throws Exception {
         Set<Principal> all = getExpectedAllSearchResult(USER_ID);
 
-        Set<? extends Principal> result = ImmutableSet.copyOf(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, all.size(), -1));
+        Set<? extends Principal> result = SetUtils.toSet(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, all.size(), -1));
         assertTrue(result.isEmpty());
     }
 
@@ -594,13 +614,13 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
     public void testFindPrincipalsWithOffsetExceedsResultSize() throws Exception {
         Set<Principal> all = getExpectedAllSearchResult(USER_ID);
 
-        Set<? extends Principal> result = ImmutableSet.copyOf(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, all.size()+1, -1));
+        Set<? extends Principal> result = SetUtils.toSet(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, all.size()+1, -1));
         assertTrue(result.isEmpty());
     }
 
     @Test
     public void testFindPrincipalsWithLimit() {
-        Set<? extends Principal> result = ImmutableSet.copyOf(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, 0, 1));
+        Set<? extends Principal> result = SetUtils.toSet(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, 0, 1));
         int expectedSize = (hasDynamicGroups()) ? 0 : 1;
         assertEquals(expectedSize, result.size());
     }
@@ -609,13 +629,13 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
     public void testFindPrincipalsWithLimitExceedsResultSize() throws Exception {
         Set<Principal> all = getExpectedAllSearchResult(USER_ID);
 
-        Set<? extends Principal> result = ImmutableSet.copyOf(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, 0, all.size()+1));
+        Set<? extends Principal> result = SetUtils.toSet(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, 0, all.size()+1));
         assertEquals(all, result);
     }
 
     @Test
     public void testFindPrincipalsWithZeroLimit() {
-        Set<? extends Principal> result = ImmutableSet.copyOf(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, 0, 0));
+        Set<? extends Principal> result = SetUtils.toSet(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, 0, 0));
         assertTrue(result.isEmpty());
     }
 
@@ -625,7 +645,7 @@ public class ExternalGroupPrincipalProviderTest extends AbstractPrincipalTest {
 
         long offset = all.size()-1;
         long limit = all.size();
-        Set<? extends Principal> result = ImmutableSet.copyOf(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, offset, limit));
+        Set<? extends Principal> result = SetUtils.toSet(principalProvider.findPrincipals(null, false, PrincipalManager.SEARCH_TYPE_GROUP, offset, limit));
         int expectedSize = (hasDynamicGroups()) ? 0 : 1;
         assertEquals(expectedSize, result.size());
     }
