@@ -16,13 +16,15 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.impl.principal;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.impl.SyncHandlerMapping;
 import org.junit.Before;
 import org.junit.Test;
 import org.osgi.framework.BundleContext;
 import org.osgi.framework.ServiceReference;
+
+import java.util.Set;
 
 import static org.apache.jackrabbit.oak.spi.security.authentication.external.impl.SyncHandlerMapping.PARAM_IDP_NAME;
 import static org.apache.jackrabbit.oak.spi.security.authentication.external.impl.SyncHandlerMapping.PARAM_SYNC_HANDLER_NAME;
@@ -47,21 +49,21 @@ public class SyncHandlerMappingTrackerTest {
     @Test
     public void testAddingServiceWithoutProperties() {
         tracker.addingService(ref);
-        assertTrue(Iterables.isEmpty(tracker.getIdpNames("testSH")));
+        assertTrue(IterableUtils.isEmpty(tracker.getIdpNames("testSH")));
     }
 
     @Test
     public void testAddingServiceWithIdpProp() {
         when(ref.getProperty(PARAM_IDP_NAME)).thenReturn("testIDP");
         tracker.addingService(ref);
-        assertTrue(Iterables.isEmpty(tracker.getIdpNames("testSH")));
+        assertTrue(IterableUtils.isEmpty(tracker.getIdpNames("testSH")));
     }
 
     @Test
     public void testAddingServiceWithSyncHandlerProp() {
         when(ref.getProperty(PARAM_SYNC_HANDLER_NAME)).thenReturn("testSH");
         tracker.addingService(ref);
-        assertTrue(Iterables.isEmpty(tracker.getIdpNames("testSH")));
+        assertTrue(IterableUtils.isEmpty(tracker.getIdpNames("testSH")));
     }
 
     @Test
@@ -70,43 +72,43 @@ public class SyncHandlerMappingTrackerTest {
         when(ref.getProperty(PARAM_IDP_NAME)).thenReturn("testIDP");
 
         tracker.addingService(ref);
-        assertEquals(ImmutableSet.of("testIDP"), ImmutableSet.copyOf(tracker.getIdpNames("testSH")));
+        assertEquals(Set.of("testIDP"), SetUtils.toSet(tracker.getIdpNames("testSH")));
 
         ServiceReference ref2 = mock(ServiceReference.class);
         when(ref2.getProperty(PARAM_SYNC_HANDLER_NAME)).thenReturn("testSH-2");
         when(ref2.getProperty(PARAM_IDP_NAME)).thenReturn("testIDP-2");
         tracker.addingService(ref2);
 
-        assertEquals(ImmutableSet.of("testIDP"), ImmutableSet.copyOf(tracker.getIdpNames("testSH")));
-        assertEquals(ImmutableSet.of("testIDP-2"), ImmutableSet.copyOf(tracker.getIdpNames("testSH-2")));
+        assertEquals(Set.of("testIDP"), SetUtils.toSet(tracker.getIdpNames("testSH")));
+        assertEquals(Set.of("testIDP-2"), SetUtils.toSet(tracker.getIdpNames("testSH-2")));
 
         ServiceReference ref3 = mock(ServiceReference.class);
         when(ref3.getProperty(PARAM_SYNC_HANDLER_NAME)).thenReturn("testSH");
         when(ref3.getProperty(PARAM_IDP_NAME)).thenReturn("testIDP-3");
         tracker.addingService(ref3);
 
-        assertEquals(ImmutableSet.of("testIDP", "testIDP-3"), ImmutableSet.copyOf(tracker.getIdpNames("testSH")));
-        assertEquals(ImmutableSet.of("testIDP-2"), ImmutableSet.copyOf(tracker.getIdpNames("testSH-2")));
+        assertEquals(Set.of("testIDP", "testIDP-3"), SetUtils.toSet(tracker.getIdpNames("testSH")));
+        assertEquals(Set.of("testIDP-2"), SetUtils.toSet(tracker.getIdpNames("testSH-2")));
     }
 
     @Test
     public void testModifiedServiceWithoutProperties() {
         tracker.modifiedService(ref, service);
-        assertTrue(Iterables.isEmpty(tracker.getIdpNames("testSH")));
+        assertTrue(IterableUtils.isEmpty(tracker.getIdpNames("testSH")));
     }
 
     @Test
     public void testModifiedServiceWithIdpProp() {
         when(ref.getProperty(PARAM_IDP_NAME)).thenReturn("testIDP");
         tracker.modifiedService(ref, service);
-        assertTrue(Iterables.isEmpty(tracker.getIdpNames("testSH")));
+        assertTrue(IterableUtils.isEmpty(tracker.getIdpNames("testSH")));
     }
 
     @Test
     public void testModifiedServiceWithSyncHandlerProp() {
         when(ref.getProperty(PARAM_SYNC_HANDLER_NAME)).thenReturn("testSH");
         tracker.modifiedService(ref, service);
-        assertTrue(Iterables.isEmpty(tracker.getIdpNames("testSH")));
+        assertTrue(IterableUtils.isEmpty(tracker.getIdpNames("testSH")));
     }
 
     @Test
@@ -119,13 +121,13 @@ public class SyncHandlerMappingTrackerTest {
         when(ref.getProperty(PARAM_SYNC_HANDLER_NAME)).thenReturn("testSH");
         when(ref.getProperty(PARAM_IDP_NAME)).thenReturn("testIDP-2");
         tracker.modifiedService(ref, service);
-        assertEquals(ImmutableSet.of("testIDP-2"), ImmutableSet.copyOf(tracker.getIdpNames("testSH")));
+        assertEquals(Set.of("testIDP-2"), SetUtils.toSet(tracker.getIdpNames("testSH")));
 
         when(ref.getProperty(PARAM_SYNC_HANDLER_NAME)).thenReturn("testSH-3");
         when(ref.getProperty(PARAM_IDP_NAME)).thenReturn("testIDP-3");
         tracker.modifiedService(ref, service);
-        assertTrue(Iterables.isEmpty(tracker.getIdpNames("testSH")));
-        assertEquals(ImmutableSet.of("testIDP-3"), ImmutableSet.copyOf(tracker.getIdpNames("testSH-3")));
+        assertTrue(IterableUtils.isEmpty(tracker.getIdpNames("testSH")));
+        assertEquals(Set.of("testIDP-3"), SetUtils.toSet(tracker.getIdpNames("testSH-3")));
     }
 
     @Test
@@ -136,6 +138,6 @@ public class SyncHandlerMappingTrackerTest {
         tracker.addingService(ref);
         tracker.removedService(ref, service);
 
-        assertTrue(Iterables.isEmpty(tracker.getIdpNames("testSH")));
+        assertTrue(IterableUtils.isEmpty(tracker.getIdpNames("testSH")));
     }
 }
