@@ -17,10 +17,9 @@
 
 package org.apache.jackrabbit.oak.security.authentication.ldap.impl;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.directory.api.util.Strings;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
+import org.apache.jackrabbit.oak.commons.collections.IteratorUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalGroup;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalIdentity;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalIdentityException;
@@ -61,20 +60,20 @@ public class LdapIdentityProviderTest extends AbstractLdapIdentityProviderTest {
     @Test
     public void testListUsers() throws Exception {
         Iterator<ExternalUser> users = idp.listUsers();
-        Iterator<String> ids = Iterators.transform(users, externalUser -> externalUser.getId());
+        Iterator<String> ids = IteratorUtils.transform(users, externalUser -> externalUser.getId());
 
-        Set<String> expectedIds = ImmutableSet.of(TEST_USER0_UID, TEST_USER1_UID, TEST_USER5_UID, "hnelson", "thardy", "tquist", "fchristi", "wbush", "cbuckley", "jhallett", "mchrysta", "wbligh", "jfryer");
-        assertEquals(expectedIds, ImmutableSet.copyOf(ids));
+        Set<String> expectedIds = Set.of(TEST_USER0_UID, TEST_USER1_UID, TEST_USER5_UID, "hnelson", "thardy", "tquist", "fchristi", "wbush", "cbuckley", "jhallett", "mchrysta", "wbligh", "jfryer");
+        assertEquals(expectedIds, SetUtils.toSet(ids));
     }
 
     @Test
     public void testListUsersWithExtraFilter() throws Exception {
         providerConfig.getUserConfig().setExtraFilter(PARAM_USER_EXTRA_FILTER_DEFAULT);
         Iterator<ExternalUser> users = idp.listUsers();
-        Iterator<String> ids = Iterators.transform(users, externalUser -> externalUser.getId());
+        Iterator<String> ids = IteratorUtils.transform(users, externalUser -> externalUser.getId());
 
-        Set<String> expectedIds = ImmutableSet.of(TEST_USER0_UID, TEST_USER1_UID, TEST_USER5_UID, "hnelson", "thardy", "tquist", "fchristi", "wbush", "cbuckley", "jhallett", "mchrysta", "wbligh", "jfryer");
-        assertEquals(expectedIds, ImmutableSet.copyOf(ids));
+        Set<String> expectedIds = Set.of(TEST_USER0_UID, TEST_USER1_UID, TEST_USER5_UID, "hnelson", "thardy", "tquist", "fchristi", "wbush", "cbuckley", "jhallett", "mchrysta", "wbligh", "jfryer");
+        assertEquals(expectedIds, SetUtils.toSet(ids));
     }
 
     /**
@@ -200,10 +199,10 @@ public class LdapIdentityProviderTest extends AbstractLdapIdentityProviderTest {
     public void testGetDeclaredMembers() throws Exception {
         ExternalGroup gr = idp.getGroup(TEST_GROUP1_NAME);
         Iterable<ExternalIdentityRef> memberrefs = gr.getDeclaredMembers();
-        Iterable<String> memberIds = Iterables.transform(memberrefs, externalIdentityRef -> externalIdentityRef.getId());
+        Iterable<String> memberIds = IterableUtils.transform(memberrefs, externalIdentityRef -> externalIdentityRef.getId());
 
-        Set<String> expected = ImmutableSet.copyOf(TEST_GROUP1_MEMBERS);
-        assertEquals(expected, ImmutableSet.copyOf(memberIds));
+        Set<String> expected = Set.of(TEST_GROUP1_MEMBERS);
+        assertEquals(expected, SetUtils.toSet(memberIds));
     }
 
     @Test
@@ -212,7 +211,7 @@ public class LdapIdentityProviderTest extends AbstractLdapIdentityProviderTest {
 
         ExternalGroup gr = idp.getGroup(TEST_GROUP1_NAME);
         Iterable<ExternalIdentityRef> memberrefs = gr.getDeclaredMembers();
-        assertTrue(Iterables.isEmpty(memberrefs));
+        assertTrue(IterableUtils.isEmpty(memberrefs));
     }
 
     @Test
@@ -237,8 +236,8 @@ public class LdapIdentityProviderTest extends AbstractLdapIdentityProviderTest {
 
         ExternalUser user = idp.getUser(TEST_USER1_UID);
         Iterable<ExternalIdentityRef> groupRefs = user.getDeclaredGroups();
-        Iterable<String> groupIds = Iterables.transform(groupRefs, externalIdentityRef -> externalIdentityRef.getId());
-        assertEquals(ImmutableSet.copyOf(TEST_USER1_GROUPS), ImmutableSet.copyOf(groupIds));
+        Iterable<String> groupIds = IterableUtils.transform(groupRefs, externalIdentityRef -> externalIdentityRef.getId());
+        assertEquals(Set.of(TEST_USER1_GROUPS), SetUtils.toSet(groupIds));
     }
 
     @Test
@@ -267,7 +266,7 @@ public class LdapIdentityProviderTest extends AbstractLdapIdentityProviderTest {
 
     @Test
     public void testRemoveEmptyString() throws Exception {
-        providerConfig.setCustomAttributes(new String[] {"a", Strings.EMPTY_STRING, "b" });
+        providerConfig.setCustomAttributes(new String[] {"a", "", "b" });
         assertArrayEquals("Array must not contain empty strings", new String[] {"a", "b" }, providerConfig.getCustomAttributes());
     }
 
@@ -294,10 +293,10 @@ public class LdapIdentityProviderTest extends AbstractLdapIdentityProviderTest {
     @Test
     public void testListGroups() throws Exception {
         Iterator<ExternalGroup> groups = idp.listGroups();
-        Iterator<String> ids = Iterators.transform(groups, externalGroup -> externalGroup.getId());
+        Iterator<String> ids = IteratorUtils.transform(groups, externalGroup -> externalGroup.getId());
 
-        Set<String> expectedIds = ImmutableSet.of(TEST_GROUP1_NAME, TEST_GROUP2_NAME, TEST_GROUP3_NAME, "Administrators");
-        assertEquals(expectedIds, ImmutableSet.copyOf(ids));
+        Set<String> expectedIds = Set.of(TEST_GROUP1_NAME, TEST_GROUP2_NAME, TEST_GROUP3_NAME, "Administrators");
+        assertEquals(expectedIds, SetUtils.toSet(ids));
     }
 
     @Test
@@ -305,9 +304,9 @@ public class LdapIdentityProviderTest extends AbstractLdapIdentityProviderTest {
         providerConfig.getGroupConfig().setExtraFilter("");
 
         Iterator<ExternalGroup> groups = idp.listGroups();
-        Iterator<String> ids = Iterators.transform(groups, externalGroup -> externalGroup.getId());
+        Iterator<String> ids = IteratorUtils.transform(groups, externalGroup -> externalGroup.getId());
 
-        Set<String> expectedIds = ImmutableSet.of(TEST_GROUP1_NAME, TEST_GROUP2_NAME, TEST_GROUP3_NAME, "Administrators");
-        assertEquals(expectedIds, ImmutableSet.copyOf(ids));
+        Set<String> expectedIds = Set.of(TEST_GROUP1_NAME, TEST_GROUP2_NAME, TEST_GROUP3_NAME, "Administrators");
+        assertEquals(expectedIds, SetUtils.toSet(ids));
     }
 }
