@@ -16,10 +16,8 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.jackrabbit.oak.spi.mount;
 
-import static org.apache.jackrabbit.guava.common.collect.ImmutableList.of;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
@@ -27,12 +25,13 @@ import org.apache.jackrabbit.oak.spi.mount.MountInfo;
 import org.junit.Test;
 
 import java.util.Collections;
+import java.util.List;
 
 public class MountInfoTest {
 
     @Test
     public void testIsMounted() throws Exception{
-        MountInfo md = new MountInfo("foo", false, of("/x/y"), of("/a", "/b"));
+        MountInfo md = new MountInfo("foo", false, List.of("/x/y"), List.of("/a", "/b"));
         assertTrue(md.isMounted("/a"));
         assertTrue(md.isMounted("/b"));
         assertTrue(md.isMounted("/b/c/d"));
@@ -45,7 +44,7 @@ public class MountInfoTest {
 
     @Test
     public void testIsUnder() {
-        MountInfo md = new MountInfo("foo", false, Collections.<String>emptyList(), of("/apps", "/etc/config", "/content/my/site", "/var"));
+        MountInfo md = new MountInfo("foo", false, Collections.emptyList(), List.of("/apps", "/etc/config", "/content/my/site", "/var"));
         assertTrue(md.isUnder("/etc"));
         assertTrue(md.isUnder("/content"));
         assertTrue(md.isUnder("/content/my"));
@@ -56,7 +55,7 @@ public class MountInfoTest {
 
     @Test
     public void testIsDirectlyUnder() {
-        MountInfo md = new MountInfo("foo", false, Collections.<String>emptyList(), of("/apps", "/etc/my/config", "/var"));
+        MountInfo md = new MountInfo("foo", false, Collections.<String>emptyList(), List.of("/apps", "/etc/my/config", "/var"));
         assertFalse(md.isDirectlyUnder("/etc"));
         assertTrue(md.isDirectlyUnder("/etc/my"));
         assertFalse(md.isDirectlyUnder("/etc/my/config"));
@@ -65,7 +64,7 @@ public class MountInfoTest {
 
     @Test
     public void testSupportFragment() {
-        MountInfo md = new MountInfo("foo", false, of("/apps", "/libs/*/site", "/content/*$", "/var$"), Collections.emptyList());
+        MountInfo md = new MountInfo("foo", false, List.of("/apps", "/libs/*/site", "/content/*$", "/var$"), Collections.emptyList());
 
         assertFalse(md.isSupportFragment("/"));
         assertTrue(md.isSupportFragment("/apps"));
@@ -86,7 +85,7 @@ public class MountInfoTest {
 
     @Test
     public void testSupportFragmentUnder() {
-        MountInfo md = new MountInfo("foo", false, of("/apps", "/libs/*/site", "/content/*$", "/var$"), Collections.emptyList());
+        MountInfo md = new MountInfo("foo", false, List.of("/apps", "/libs/*/site", "/content/*$", "/var$"), Collections.emptyList());
 
         assertTrue(md.isSupportFragmentUnder("/"));
         assertTrue(md.isSupportFragmentUnder("/apps"));
@@ -107,7 +106,7 @@ public class MountInfoTest {
 
     @Test
     public void testIsMountedWithFragments() {
-        MountInfo md = new MountInfo("foo", false, of("/apps", "/libs/*/site", "/content/*$", "/var$"), Collections.emptyList());
+        MountInfo md = new MountInfo("foo", false, List.of("/apps", "/libs/*/site", "/content/*$", "/var$"), Collections.emptyList());
 
         assertFalse(md.isMounted("/oak:mount-foo"));
         assertTrue(md.isMounted("/apps/oak:mount-foo"));
