@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.security.authentication.token;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.oak.api.AuthInfo;
 import org.apache.jackrabbit.oak.spi.security.authentication.AbstractLoginModule;
 import org.apache.jackrabbit.oak.spi.security.authentication.AuthInfoImpl;
@@ -56,7 +55,7 @@ public class TestLoginModule extends AbstractLoginModule {
     public boolean logout() throws LoginException {
         if (credentials != null) {
             Set<? extends Principal> s = Collections.singleton(EveryonePrincipal.getInstance());
-            return logout(ImmutableSet.of(credentials), s);
+            return logout(Set.of(credentials), s);
         } else {
             return false;
         }
