@@ -16,9 +16,6 @@
  */
 package org.apache.jackrabbit.oak.security.authentication.user;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Maps;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.api.security.user.UserManager;
@@ -28,6 +25,7 @@ import org.apache.jackrabbit.oak.api.CommitFailedException;
 import org.apache.jackrabbit.oak.api.ContentRepository;
 import org.apache.jackrabbit.oak.api.ContentSession;
 import org.apache.jackrabbit.oak.api.Root;
+import org.apache.jackrabbit.oak.commons.jdkcompat.Java23Subject;
 import org.apache.jackrabbit.oak.commons.junit.LogCustomizer;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
 import org.apache.jackrabbit.oak.security.internal.SecurityProviderBuilder;
@@ -70,8 +68,11 @@ import java.security.PrivilegedExceptionAction;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.apache.jackrabbit.oak.spi.security.authentication.AbstractLoginModule.SHARED_KEY_CREDENTIALS;
 import static org.apache.jackrabbit.oak.spi.security.authentication.AbstractLoginModule.SHARED_KEY_PRE_AUTH_LOGIN;
@@ -158,7 +159,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
 
     private LoginModuleImpl createLoginModule(@NotNull Subject subject, @Nullable CallbackHandler cbh, @NotNull Map<String, ?> sharedState) {
         LoginModuleImpl lm = new LoginModuleImpl();
-        lm.initialize(subject, cbh, sharedState, Maps.newHashMap());
+        lm.initialize(subject, cbh, sharedState, new HashMap<>());
         return lm;
     }
 
@@ -321,7 +322,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
         createTestUser();
 
         Credentials credentials = new SimpleCredentials(USER_ID, "wrongPw".toCharArray());
-        HashMap<String, Object> shared = Maps.newHashMap();
+        HashMap<String, Object> shared = new HashMap<>();
         shared.put(SHARED_KEY_CREDENTIALS, credentials);
         LoginModuleImpl lm = createLoginModule(new Subject(), createCallbackHandler(getContentRepository(), getSecurityProvider()), shared);
         try {
@@ -348,8 +349,8 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
             }
         };
 
-        Subject subject = new Subject(false, ImmutableSet.of(), ImmutableSet.of(unsupportedCredentials), ImmutableSet.of());
-        LoginModuleImpl lm = createLoginModule(subject, cbh, Maps.newHashMap());
+        Subject subject = new Subject(false, Set.of(), Set.of(unsupportedCredentials), Set.of());
+        LoginModuleImpl lm = createLoginModule(subject, cbh, new HashMap<>());
         assertFalse(lm.login());
 
         verifyNoInteractions(monitor);
@@ -367,16 +368,16 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
         Principal foreignPrincipal = new PrincipalImpl("foreign");
 
         UserAuthenticationFactory uaf = when(mock(UserAuthenticationFactory.class).getAuthentication(any(UserConfiguration.class), any(Root.class), anyString())).thenReturn(authentication).getMock();
-        Map<String, Object> sharedState = Maps.newHashMap();
+        Map<String, Object> sharedState = new HashMap<>();
         sharedState.put(SHARED_KEY_PRE_AUTH_LOGIN, new PreAuthenticatedLogin("uid"));
 
-        Subject subject = new Subject(false, ImmutableSet.of(foreignPrincipal), ImmutableSet.of(), ImmutableSet.of());
+        Subject subject = new Subject(false, Set.of(foreignPrincipal), Set.of(), Set.of());
         LoginModuleImpl lm = createLoginModule(subject, createCallbackHandler(uaf), sharedState);
         assertTrue(lm.login());
         assertTrue(lm.commit());
 
         // verify subject has been updated with test-user principals
-        Set<Principal> expected = new ImmutableSet.Builder().add(foreignPrincipal).addAll(principals).build();
+        Set<Principal> expected = Stream.concat(Stream.of(foreignPrincipal), principals.stream()).collect(Collectors.toSet());
         assertEquals(expected, subject.getPrincipals());
         // no other public credentials than the AuthInfo
         assertEquals(1, subject.getPublicCredentials().size());
@@ -403,7 +404,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
         Authentication authentication = when(mock(Authentication.class).authenticate(any(Credentials.class))).thenReturn(true).getMock();
         UserAuthenticationFactory uaf = when(mock(UserAuthenticationFactory.class).getAuthentication(any(UserConfiguration.class), any(Root.class), anyString())).thenReturn(authentication).getMock();
 
-        Map<String, Object> sharedState = Maps.newHashMap();
+        Map<String, Object> sharedState = new HashMap<>();
         sharedState.put(SHARED_KEY_PRE_AUTH_LOGIN, new PreAuthenticatedLogin("uid"));
 
         Subject subject = new Subject();
@@ -427,7 +428,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
         Authentication authentication = when(mock(Authentication.class).authenticate(PreAuthenticatedLogin.PRE_AUTHENTICATED)).thenThrow(le).getMock();
         UserAuthenticationFactory uaf = when(mock(UserAuthenticationFactory.class).getAuthentication(any(UserConfiguration.class), any(Root.class), anyString())).thenReturn(authentication).getMock();
 
-        Map<String, Object> sharedState = Maps.newHashMap();
+        Map<String, Object> sharedState = new HashMap<>();
         sharedState.put(SHARED_KEY_PRE_AUTH_LOGIN, new PreAuthenticatedLogin("uid"));
 
         LoginModuleImpl lm = createLoginModule(new Subject(), createCallbackHandler(uaf), sharedState);
@@ -441,7 +442,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
 
     @Test
     public void testLoginWithReadOnlySubject() throws Exception {
-        Map<String, Object> sharedState = Maps.newHashMap();
+        Map<String, Object> sharedState = new HashMap<>();
         sharedState.put(SHARED_KEY_CREDENTIALS, getAdminCredentials());
 
         Principal unknownPrincipal = new PrincipalImpl("unknown");
@@ -467,7 +468,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
     @Test
     public void testNullUserAuthentication() throws Exception {
         CallbackHandler cbh = createCallbackHandler(mock(UserAuthenticationFactory.class));
-        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, new HashMap<>());
 
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
@@ -482,7 +483,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
         SecurityProvider sp = when(mock(SecurityProvider.class).getConfiguration(UserConfiguration.class)).thenReturn(uc).getMock();
         CallbackHandler cbh = createCallbackHandler(getContentRepository(), sp);
 
-        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, new HashMap<>());
 
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
@@ -495,7 +496,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
     public void testMissingSecurityProviderGuestLogin() throws Exception {
         CallbackHandler cbh = createCallbackHandler(getContentRepository(), null);
 
-        LoginModuleImpl loginModule = createLoginModule(new Subject(false, ImmutableSet.of(), ImmutableSet.of(new GuestCredentials()), ImmutableSet.of()), cbh, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(new Subject(false, Set.of(), Set.of(new GuestCredentials()), Set.of()), cbh, new HashMap<>());
 
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
@@ -508,7 +509,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
     public void testMissingSecurityProvider() throws Exception {
         CallbackHandler cbh = createCallbackHandler(getContentRepository(), null);
 
-        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, new HashMap<>());
 
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
@@ -521,7 +522,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
     public void testMissingRoot() throws Exception {
         CallbackHandler cbh = createCallbackHandler(null, getSecurityProvider());
 
-        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, new HashMap<>());
 
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
@@ -532,7 +533,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
 
     @Test
     public void testMissingCallbackHandler() throws Exception {
-        LoginModuleImpl loginModule = createLoginModule(new Subject(), null, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(new Subject(), null, new HashMap<>());
 
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
@@ -555,7 +556,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
                 }
             }
         };
-        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(new Subject(), cbh, new HashMap<>());
 
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
@@ -588,9 +589,9 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
 
         CallbackHandler cbh = createCallbackHandler(factory);
         SimpleCredentials creds = new SimpleCredentials("loginId", new char[0]);
-        Subject subject = new Subject(false, Sets.newHashSet(), ImmutableSet.of(creds), Sets.newHashSet());
+        Subject subject = new Subject(false, new HashSet<>(), Set.of(creds), new HashSet<>());
 
-        LoginModuleImpl loginModule = createLoginModule(subject, cbh, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(subject, cbh, new HashMap<>());
         assertTrue(loginModule.login());
         assertTrue(loginModule.commit());
 
@@ -628,9 +629,9 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
         };
 
         CallbackHandler cbh = createCallbackHandler(factory);
-        Subject subject = new Subject(false, Sets.newHashSet(), ImmutableSet.of(), Sets.newHashSet());
+        Subject subject = new Subject(false, new HashSet<>(), Set.of(), new HashSet<>());
 
-        LoginModuleImpl loginModule = createLoginModule(subject, cbh, Maps.newHashMap());
+        LoginModuleImpl loginModule = createLoginModule(subject, cbh, new HashMap<>());
         assertTrue(loginModule.login());
         assertTrue(loginModule.commit());
 
@@ -649,9 +650,9 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
     @Test
     public void testCommitReadOnlySubject() throws Exception {
         Principal principal = new PrincipalImpl("subjetPrincipal");
-        Subject subject = new Subject(true, ImmutableSet.of(principal), ImmutableSet.of(), ImmutableSet.of());
+        Subject subject = new Subject(true, Set.of(principal), Set.of(), Set.of());
 
-        Map<String, Object> shared = Maps.newHashMap();
+        Map<String, Object> shared = new HashMap<>();
         shared.put(AbstractLoginModule.SHARED_KEY_CREDENTIALS, new SimpleCredentials(getTestUser().getID(), getTestUser().getID().toCharArray()));
 
         LoginModuleImpl loginModule = createLoginModule(subject, createCallbackHandler(new UserAuthenticationFactoryImpl()), shared);
@@ -675,7 +676,7 @@ public class LoginModuleImplTest extends AbstractSecurityTest {
     public void testLoginLogoutPreexistingReadonlySubject() throws Exception {
         createTestUser();
         Subject subject = new Subject(true, Collections.singleton(() -> "JMXPrincipal: foo"), Collections.EMPTY_SET, Collections.EMPTY_SET);
-        Subject.doAs(subject, (PrivilegedExceptionAction<Void>) () -> {
+        Java23Subject.doAs(subject, (PrivilegedExceptionAction<Void>) () -> {
             LogCustomizer logCustomizer = LogCustomizer
                     .forLogger("org.apache.jackrabbit.oak.core.ContentSessionImpl")
                     .enable(Level.ERROR)
