@@ -16,8 +16,6 @@
  */
 package org.apache.jackrabbit.oak.security.authorization.accesscontrol;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlList;
 import org.apache.jackrabbit.api.security.principal.PrincipalManager;
@@ -191,7 +189,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
         }
         for (String path : notAccessible) {
             try {
-                testAcMgr.hasPrivileges(path, ImmutableSet.of(), privs);
+                testAcMgr.hasPrivileges(path, Set.of(), privs);
                 fail("AccessControlManager#hasPrivileges for node that is not accessible should fail.");
             } catch (PathNotFoundException e) {
                 // success
@@ -319,10 +317,10 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
         assertArrayEquals(new Privilege[0], testAcMgr.getPrivileges(null, testPrincipals));
 
         Privilege[] privs = testAcMgr.getPrivileges(testPath);
-        assertEquals(ImmutableSet.copyOf(testPrivileges), ImmutableSet.copyOf(privs));
+        assertEquals(Set.of(testPrivileges), Set.of(privs));
 
         privs = testAcMgr.getPrivileges(testPath, testPrincipals);
-        assertEquals(ImmutableSet.copyOf(testPrivileges), ImmutableSet.copyOf(privs));
+        assertEquals(Set.of(testPrivileges), Set.of(privs));
 
         // but for 'admin' the test-session doesn't have sufficient privileges
         try {
@@ -339,7 +337,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
         root.commit();
 
         testRoot.refresh();
-        List<Principal> principals = ImmutableList.of(testPrincipal, EveryonePrincipal.getInstance());
+        List<Principal> principals = List.of(testPrincipal, EveryonePrincipal.getInstance());
         for (Principal principal : principals) {
             // testRoot can't read access control content -> doesn't see
             // the existing policies and creates a new applicable policy.
@@ -359,7 +357,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
         testRoot.refresh();
         PrincipalManager testPrincipalMgr = getPrincipalManager(testRoot);
 
-        List<Principal> principals = ImmutableList.of(testPrincipal, EveryonePrincipal.getInstance());
+        List<Principal> principals = List.of(testPrincipal, EveryonePrincipal.getInstance());
         for (Principal principal : principals) {
             if (testPrincipalMgr.hasPrincipal(principal.getName())) {
                 // testRoot can't read access control content -> doesn't see
@@ -419,7 +417,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
 
         testRoot.refresh();
 
-        List<String> paths = ImmutableList.of(testPath, NodeTypeConstants.NODE_TYPES_PATH);
+        List<String> paths = List.of(testPath, NodeTypeConstants.NODE_TYPES_PATH);
         for (String path : paths) {
             assertFalse(testAcMgr.hasPrivileges(path, privilegesFromNames(PrivilegeConstants.JCR_READ_ACCESS_CONTROL)));
             try {
@@ -491,7 +489,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
         root.commit();
 
         testRoot.refresh();
-        Set<Principal> principals = ImmutableSet.of(testPrincipal, EveryonePrincipal.getInstance());
+        Set<Principal> principals = Set.of(testPrincipal, EveryonePrincipal.getInstance());
         AccessControlPolicy[] policies = testAcMgr.getEffectivePolicies(principals);
         assertPolicies(policies, 2);
     }
@@ -516,7 +514,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
 
         testRoot.refresh();
 
-        Set<Principal> principals = ImmutableSet.of(testPrincipal, EveryonePrincipal.getInstance());
+        Set<Principal> principals = Set.of(testPrincipal, EveryonePrincipal.getInstance());
         AccessControlPolicy[] policies = testAcMgr.getEffectivePolicies(principals);
         assertPolicies(policies, 1);
     }
@@ -530,7 +528,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
         testRoot.refresh();
 
         // effective policies must NOT include ReadPolicy 
-        Set<Principal> principals = ImmutableSet.of(testPrincipal, EveryonePrincipal.getInstance());
+        Set<Principal> principals = Set.of(testPrincipal, EveryonePrincipal.getInstance());
         AccessControlPolicy[] policies = testAcMgr.getEffectivePolicies(principals);
         assertPolicies(policies, 0, false);
     }
@@ -545,7 +543,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
 
         // effective policies must include ReadPolicy 
         // but no path-not-found must be raised if the readable-path is not accessible
-        Set<Principal> principals = ImmutableSet.of(testPrincipal, EveryonePrincipal.getInstance());
+        Set<Principal> principals = Set.of(testPrincipal, EveryonePrincipal.getInstance());
         AccessControlPolicy[] policies = testAcMgr.getEffectivePolicies(principals);
         // since no other ac-setup exists for 'everyone' principal -> only ReadPolicy is found
         assertPolicies(policies, 1, true);
@@ -560,7 +558,7 @@ public class AccessControlManagerLimitedPermissionsTest extends AbstractSecurity
         testRoot.refresh();
 
         // effective policies must include ReadPolicy 
-        Set<Principal> principals = ImmutableSet.of(testPrincipal, EveryonePrincipal.getInstance());
+        Set<Principal> principals = Set.of(testPrincipal, EveryonePrincipal.getInstance());
         AccessControlPolicy[] policies = testAcMgr.getEffectivePolicies(principals);
         // since no other ac-setup exists for 'everyone' principal -> only ReadPolicy is found
         assertPolicies(policies, 1, true);
