@@ -16,10 +16,6 @@
  */
 package org.apache.jackrabbit.oak.security.authorization.permission;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlList;
 import org.apache.jackrabbit.api.security.user.Group;
@@ -31,6 +27,8 @@ import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.plugins.memory.MemoryChildNodeEntry;
 import org.apache.jackrabbit.oak.plugins.tree.RootProvider;
 import org.apache.jackrabbit.oak.plugins.tree.TreeProvider;
@@ -64,8 +62,10 @@ import javax.jcr.security.AccessControlManager;
 import java.security.Principal;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import static org.apache.jackrabbit.JcrConstants.JCR_MIXINTYPES;
@@ -191,7 +191,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
 
     @NotNull
     private static Set<String> getAccessControlledPaths(@NotNull Tree principalTree) {
-        Set<String> s = Sets.newHashSet();
+        Set<String> s = new HashSet<>();
         for (Tree tree : principalTree.getChildren()) {
             String path = getAccessControlledPath(tree);
             if (path != null) {
@@ -455,7 +455,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
         // verify that the permission provider still exposes the correct privilege
         // (jcr:all) for the given childPath irrespective of the dynamic nature of
         // the privilege bits in the persisted permission entry.
-        Set<Principal> principalSet = ImmutableSet.<Principal>of(EveryonePrincipal.getInstance());
+        Set<Principal> principalSet = Set.of(EveryonePrincipal.getInstance());
         PermissionProvider permissionProvider = getConfig(AuthorizationConfiguration.class).getPermissionProvider(root, root.getContentSession().getWorkspaceName(), principalSet);
         Tree childTree = root.getTree(childPath);
         assertTrue(permissionProvider.hasPrivileges(childTree, PrivilegeConstants.JCR_ALL));
@@ -505,7 +505,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
         AccessControlManager acMgr = getAccessControlManager(root);
         JackrabbitAccessControlList acl = AccessControlUtils.getAccessControlList(acMgr, childPath);
         acl = AccessControlUtils.getAccessControlList(acMgr, childPath);
-        acl.addEntry(EveryonePrincipal.getInstance(), privilegesFromNames(JCR_READ), false, ImmutableMap.of(REP_GLOB, getValueFactory(root).createValue("/*/jcr:content")));
+        acl.addEntry(EveryonePrincipal.getInstance(), privilegesFromNames(JCR_READ), false, Map.of(REP_GLOB, getValueFactory(root).createValue("/*/jcr:content")));
         acMgr.setPolicy(childPath, acl);
         root.commit();
 
@@ -552,7 +552,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
                 assertEquals(2, testRoot.getChildrenCount(Long.MAX_VALUE));
                 assertNumPermissionsProperty(3, testRoot);
 
-                Set<String> accessControlledPaths = Sets.newHashSet(testPath, aa.getPath(), bb.getPath());
+                Set<String> accessControlledPaths = Set.of(testPath, aa.getPath(), bb.getPath());
                 assertEquals(accessControlledPaths, getAccessControlledPaths(testRoot));
             } finally {
                 root.getTree(aaPath).remove();
@@ -588,7 +588,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
             assertEquals(2, testRoot.getChildrenCount(Long.MAX_VALUE));
             assertTrue(testRoot.hasChild(bbPath.hashCode() + ""));
 
-            assertEquals(Sets.newHashSet(testPath, bb.getPath()), getAccessControlledPaths(testRoot));
+            assertEquals(Set.of(testPath, bb.getPath()), getAccessControlledPaths(testRoot));
             assertNumPermissionsProperty(2, testRoot);
         }
     }
@@ -616,7 +616,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
             assertEquals(2, testRoot.getChildrenCount(Long.MAX_VALUE));
             assertTrue(testRoot.hasChild(aaPath.hashCode() + ""));
 
-            assertEquals(Sets.newHashSet(testPath, aa.getPath()), getAccessControlledPaths(testRoot));
+            assertEquals(Set.of(testPath, aa.getPath()), getAccessControlledPaths(testRoot));
             assertNumPermissionsProperty(2, testRoot);
         }
     }
@@ -646,7 +646,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
             assertFalse(testRoot.hasChild(aaPath.hashCode() + ""));
             assertFalse(testRoot.hasChild(bbPath.hashCode() + ""));
 
-            assertEquals(Sets.newHashSet(testPath), getAccessControlledPaths(testRoot));
+            assertEquals(Set.of(testPath), getAccessControlledPaths(testRoot));
             assertNumPermissionsProperty(1, testRoot);
         }
     }
@@ -673,7 +673,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
             addACE(cc.getPath(), testPrincipal, JCR_READ);
             root.commit();
 
-            Set<String> paths = Sets.newHashSet(aPath, bPath, cPath);
+            Set<String> paths = SetUtils.toSet(aPath, bPath, cPath);
             paths.add(testPath);
 
             assertEquals(2, testRoot.getChildrenCount(Long.MAX_VALUE));
@@ -726,7 +726,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
             addACE(cc.getPath(), testPrincipal, JCR_READ);
             root.commit();
 
-            Set<String> paths = Sets.newHashSet(aPath, bPath, cPath);
+            Set<String> paths = SetUtils.toSet(aPath, bPath, cPath);
             paths.add(testPath);
 
             assertEquals(2, testRoot.getChildrenCount(Long.MAX_VALUE));
@@ -795,9 +795,9 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
 
         principalPermissionStore = root.getTree(PermissionConstants.PERMISSIONS_STORE_PATH).getChild(adminSession.getWorkspaceName()).getChild(testPrincipal.getName());
         assertEquals(2, principalPermissionStore.getChildrenCount(10));
-        Iterable<String> paths = Iterables.transform(principalPermissionStore.getChildren(), tree -> tree.getProperty(REP_ACCESS_CONTROLLED_PATH).getValue(Type.STRING));
+        Iterable<String> paths = IterableUtils.transform(principalPermissionStore.getChildren(), tree -> tree.getProperty(REP_ACCESS_CONTROLLED_PATH).getValue(Type.STRING));
 
-        assertEquals(ImmutableSet.of(testPath, t.getPath()), ImmutableSet.copyOf(paths));
+        assertEquals(Set.of(testPath, t.getPath()), SetUtils.toSet(paths));
     }
 
     @Test
@@ -816,7 +816,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
 
         NodeState child = mock(NodeState.class);
         Iterable newCnes = Collections.singleton(new MemoryChildNodeEntry(":hidden", child));
-        Iterable cnes = Iterables.concat(newCnes, before.getChildNodeEntries());
+        Iterable cnes = IterableUtils.chainedIterable(newCnes, before.getChildNodeEntries());
         when(after.getChildNodeEntries()).thenReturn(cnes);
         when(after.getChildNode(":hidden")).thenReturn(child);
 
@@ -836,13 +836,13 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
 
         NodeState child = mock(NodeState.class);
         Iterable hidden = Collections.singleton(new MemoryChildNodeEntry(":hidden", child));
-        Iterable cnes = Iterables.concat(hidden, nodeState.getChildNodeEntries());
+        Iterable cnes = IterableUtils.chainedIterable(hidden, nodeState.getChildNodeEntries());
         when(before.getChildNodeEntries()).thenReturn(cnes);
         when(before.getChildNode(":hidden")).thenReturn(child);
 
         NodeState child2 = when(mock(NodeState.class).exists()).thenReturn(true).getMock();
         hidden = Collections.singleton(new MemoryChildNodeEntry(":hidden", child2));
-        cnes = Iterables.concat(hidden, nodeState.getChildNodeEntries());
+        cnes = IterableUtils.chainedIterable(hidden, nodeState.getChildNodeEntries());
         when(after.getChildNodeEntries()).thenReturn(cnes);
         when(after.getChildNode(":hidden")).thenReturn(child2);
 
@@ -861,7 +861,7 @@ public class PermissionHookTest extends AbstractSecurityTest implements AccessCo
 
         NodeState child = mock(NodeState.class);
         Iterable deletedCnes = Collections.singleton(new MemoryChildNodeEntry(":hidden", child));
-        Iterable cnes = Iterables.concat(deletedCnes, after.getChildNodeEntries());
+        Iterable cnes = IterableUtils.chainedIterable(deletedCnes, after.getChildNodeEntries());
         when(before.getChildNodeEntries()).thenReturn(cnes);
         when(before.getChildNode(":hidden")).thenReturn(child);
 
