@@ -16,6 +16,7 @@
  */
 package org.apache.jackrabbit.oak.plugins.index.elastic.index;
 
+import co.elastic.clients.elasticsearch.ElasticsearchAsyncClient;
 import org.apache.jackrabbit.oak.plugins.index.elastic.ElasticConnection;
 import org.apache.jackrabbit.oak.plugins.index.elastic.ElasticIndexDefinition;
 import org.apache.jackrabbit.oak.plugins.memory.MultiStringPropertyState;
@@ -23,16 +24,17 @@ import org.apache.jackrabbit.oak.plugins.memory.StringPropertyState;
 import org.apache.jackrabbit.oak.spi.commit.CommitInfo;
 import org.apache.jackrabbit.oak.spi.state.NodeBuilder;
 import org.apache.jackrabbit.oak.spi.state.NodeState;
+import org.junit.After;
+import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Map;
 
-import static org.hamcrest.CoreMatchers.instanceOf;
-import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.eq;
 import static org.mockito.Mockito.when;
 
@@ -48,26 +50,42 @@ public class ElasticBulkProcessorHandlerTest {
     private ElasticConnection elasticConnectionMock;
 
     @Mock
+    private ElasticsearchAsyncClient esAsyncClientMock;
+
+    @Mock
     private NodeBuilder definitionBuilder;
 
     @Mock
     private CommitInfo commitInfo;
 
+    private AutoCloseable closeable;
+
     @Before
     public void setUp() {
-        MockitoAnnotations.initMocks(this);
+        closeable = MockitoAnnotations.openMocks(this);
         when(indexDefinitionMock.getDefinitionNodeState()).thenReturn(definitionNodeStateMock);
-        when(commitInfo.getInfo()).thenReturn(Collections.emptyMap());
+        when(commitInfo.getInfo()).thenReturn(Map.of());
+        when(elasticConnectionMock.getAsyncClient()).thenReturn(esAsyncClientMock);
+    }
+
+    @After
+    public void tearDown() throws Exception {
+        closeable.close();
     }
 
     @Test
-    public void defaultMode() {
+    public void defaultMode() throws IOException {
         when(definitionNodeStateMock.getProperty(eq("async"))).thenReturn(null);
 
-        ElasticBulkProcessorHandler bulkProcessorHandler = ElasticBulkProcessorHandler
-                .getBulkProcessorHandler(elasticConnectionMock, "index", indexDefinitionMock, definitionBuilder, commitInfo, true);
+        ElasticBulkProcessorHandler bulkProcessorHandler = new ElasticBulkProcessorHandler(elasticConnectionMock);
+        bulkProcessorHandler.registerIndex("index", indexDefinitionMock, definitionBuilder, commitInfo, true);
 
-        assertThat(bulkProcessorHandler, instanceOf(ElasticBulkProcessorHandler.class));
+        ElasticBulkProcessorHandler.IndexInfo indexInfo = bulkProcessorHandler.getIndexInfo("index");
+        Assert.assertNotNull(indexInfo);
+        Assert.assertFalse(indexInfo.isRealTime);
+
+        bulkProcessorHandler.flushIndex("index");
+        bulkProcessorHandler.close();
     }
 
     @Test(expected = IllegalStateException.class)
@@ -76,30 +94,89 @@ public class ElasticBulkProcessorHandlerTest {
         when(definitionNodeStateMock.getProperty(eq("sync-mode")))
                 .thenReturn(new MultiStringPropertyState("sync-mode", Arrays.asList("nrt", "rt")));
 
-        ElasticBulkProcessorHandler
-                .getBulkProcessorHandler(elasticConnectionMock, "index", indexDefinitionMock, definitionBuilder, commitInfo, true);
+        ElasticBulkProcessorHandler bulkProcessorHandler = new ElasticBulkProcessorHandler(elasticConnectionMock);
+        bulkProcessorHandler.registerIndex("index", indexDefinitionMock, definitionBuilder, commitInfo, true);
     }
 
     @Test
-    public void rtMode() {
+    public void didNotFlushIndex() throws IOException {
+        when(definitionNodeStateMock.getProperty(eq("async"))).thenReturn(null);
+        ElasticBulkProcessorHandler bulkProcessorHandler = new ElasticBulkProcessorHandler(elasticConnectionMock);
+        bulkProcessorHandler.registerIndex("index", indexDefinitionMock, definitionBuilder, commitInfo, true);
+        // Should still close successfully, but should print a warning message
+        bulkProcessorHandler.close();
+    }
+
+    @Test
+    public void useAfterCloseThrowsException() throws IOException {
+        when(definitionNodeStateMock.getProperty(eq("async"))).thenReturn(null);
+        ElasticBulkProcessorHandler bulkProcessorHandler = new ElasticBulkProcessorHandler(elasticConnectionMock);
+        bulkProcessorHandler.close();
+        // It's ok to call close twice
+        bulkProcessorHandler.close();
+
+        Assert.assertThrows(IllegalStateException.class,
+                () -> bulkProcessorHandler.registerIndex("index", indexDefinitionMock, definitionBuilder, commitInfo, true));
+        Assert.assertThrows(IllegalStateException.class,
+                () -> bulkProcessorHandler.index("index", "id", new ElasticDocument("path")));
+        Assert.assertThrows(IllegalStateException.class,
+                () -> bulkProcessorHandler.update("index", "id", new ElasticDocument("path")));
+        Assert.assertThrows(IllegalStateException.class,
+                () -> bulkProcessorHandler.delete("index", "id"));
+        Assert.assertThrows(IllegalStateException.class,
+                () -> bulkProcessorHandler.flushIndex("index"));
+    }
+
+    @Test
+    public void rtMode() throws IOException {
         when(definitionNodeStateMock.getProperty(eq("async"))).thenReturn(null);
         when(definitionNodeStateMock.getProperty(eq("sync-mode")))
                 .thenReturn(new StringPropertyState("sync-mode", "rt"));
 
-        ElasticBulkProcessorHandler bulkProcessorHandler = ElasticBulkProcessorHandler
-                .getBulkProcessorHandler(elasticConnectionMock, "index", indexDefinitionMock, definitionBuilder, commitInfo, true);
+        ElasticBulkProcessorHandler bulkProcessorHandler = new ElasticBulkProcessorHandler(elasticConnectionMock);
+        bulkProcessorHandler.registerIndex("index", indexDefinitionMock, definitionBuilder, commitInfo, true);
 
-        assertThat(bulkProcessorHandler, instanceOf(ElasticBulkProcessorHandler.RealTimeBulkProcessorHandler.class));
+        ElasticBulkProcessorHandler.IndexInfo indexInfo = bulkProcessorHandler.getIndexInfo("index");
+        Assert.assertNotNull(indexInfo);
+        Assert.assertTrue(indexInfo.isRealTime);
+        bulkProcessorHandler.flushIndex("index");
+        bulkProcessorHandler.close();
     }
 
     @Test
-    public void defaultModeWithCommitInfoOverride() {
+    public void defaultModeWithCommitInfoOverride() throws IOException {
         when(definitionNodeStateMock.getProperty(eq("async"))).thenReturn(null);
-        when(commitInfo.getInfo()).thenReturn(Collections.singletonMap("sync-mode", "rt"));
+        when(commitInfo.getInfo()).thenReturn(Map.of("sync-mode", "rt"));
 
-        ElasticBulkProcessorHandler bulkProcessorHandler = ElasticBulkProcessorHandler
-                .getBulkProcessorHandler(elasticConnectionMock, "index", indexDefinitionMock, definitionBuilder, commitInfo, true);
+        ElasticBulkProcessorHandler bulkProcessorHandler = new ElasticBulkProcessorHandler(elasticConnectionMock);
+        bulkProcessorHandler.registerIndex("index", indexDefinitionMock, definitionBuilder, commitInfo, true);
 
-        assertThat(bulkProcessorHandler, instanceOf(ElasticBulkProcessorHandler.RealTimeBulkProcessorHandler.class));
+        ElasticBulkProcessorHandler.IndexInfo indexInfo = bulkProcessorHandler.getIndexInfo("index");
+        Assert.assertNotNull(indexInfo);
+        Assert.assertTrue(indexInfo.isRealTime);
+
+        bulkProcessorHandler.flushIndex("index");
+        bulkProcessorHandler.close();
+    }
+
+    @Test
+    public void multipleIndexes() throws IOException {
+        when(definitionNodeStateMock.getProperty(eq("async"))).thenReturn(null);
+
+        ElasticBulkProcessorHandler bulkProcessorHandler = new ElasticBulkProcessorHandler(elasticConnectionMock);
+        bulkProcessorHandler.registerIndex("index1", indexDefinitionMock, definitionBuilder, commitInfo, true);
+        bulkProcessorHandler.registerIndex("index2", indexDefinitionMock, definitionBuilder, commitInfo, true);
+
+        ElasticBulkProcessorHandler.IndexInfo indexInfo1 = bulkProcessorHandler.getIndexInfo("index1");
+        Assert.assertNotNull(indexInfo1);
+        Assert.assertFalse(indexInfo1.isRealTime);
+
+        ElasticBulkProcessorHandler.IndexInfo indexInfo2 = bulkProcessorHandler.getIndexInfo("index2");
+        Assert.assertNotNull(indexInfo2);
+        Assert.assertFalse(indexInfo2.isRealTime);
+
+        Assert.assertFalse(bulkProcessorHandler.flushIndex("index1"));
+        Assert.assertFalse(bulkProcessorHandler.flushIndex("index2"));
+        bulkProcessorHandler.close();
     }
 }
