@@ -17,8 +17,8 @@
 package org.apache.jackrabbit.oak.spi.security.authorization.accesscontrol;
 
 import java.util.Collection;
+import java.util.Set;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.oak.spi.nodetype.NodeTypeConstants;
 
 /**
@@ -64,22 +64,20 @@ public interface AccessControlConstants {
      * An empty value array will make this restriction matching the target node only (i.e. equivalent to rep:glob=""). 
      * An array of property names will extend the effect of the restriction to properties of the target node that match 
      * the specified names. The {@link org.apache.jackrabbit.oak.spi.nodetype.NodeTypeConstants#RESIDUAL_NAME residual name '*'}  
-     * will match the target node and all it's properties.</p>
+     * will match the target node and all it's properties.
      * <p>
      * The corresponding restriction type is {@link org.apache.jackrabbit.oak.api.Type#STRINGS}
-     * </p>
      * <p>
      * Note: due to the support of {@link NodeTypeConstants#RESIDUAL_NAME}, which isn't a valid JCR name,
      * this restriction is defined to be of {@link org.apache.jackrabbit.oak.api.Type#STRINGS} instead of 
      * {@link org.apache.jackrabbit.oak.api.Type#NAMES}. Like the rep:glob restriction it will therefore not work with 
      * expanded JCR names or with remapped namespace prefixes.
-     * </p>
      * <p>
      * Note: In case of permission evaluation for a path pointing to a non-existing JCR item (see e.g. 
      * {@link javax.jcr.Session#hasPermission(String, String)}) a best-effort attempt is made to determine if the path 
      * may point to a property, default being that the path points to a non-existing node.
-     * </p>
-     * 
+     *
+     * <p>
      * Example:
      * <pre>
      * rep:current = []                =&gt; restriction applies to the target node only
@@ -96,19 +94,18 @@ public interface AccessControlConstants {
      * <p>Name of the optional multi-valued access control restriction that allows to combine more than one 
      * {@link #REP_GLOB} restriction. The effect is equivalent to defining multiple access control entries with a 
      * single {@link #REP_GLOB} restriction each and will match a given path or item if any of the specified glob-values 
-     * matches.</p>
+     * matches.
      * <p>
-     * Note, that an empty value array will never match any path/item.</p>
+     * Note, that an empty value array will never match any path/item.
      * <p>
      * The corresponding restriction type is {@link org.apache.jackrabbit.oak.api.Type#STRINGS}
-     * </p>
      */
     String REP_GLOBS = "rep:globs";
 
     /**
      * <p>Name of the optional multi-valued access control restriction that allows to limit the effect to one or multiple  
      * subtrees. It is a simplified variant of the common pattern using 2 {@link #REP_GLOB} wildcard patterns to grant or 
-     * deny access on a particular node in the subtree and all its descendent items.</p>
+     * deny access on a particular node in the subtree and all its descendent items.
      *
      * <pre>
      * NodePath = "/foo"
@@ -120,10 +117,10 @@ public interface AccessControlConstants {
      * cat/          |   all siblings or descendants of /foo that have an intermediate segment ending with "cat"
      * </pre>
      *  
-     * <p>Note, that variants of 'cat'-paths could also consist of multiple segments like e.g. '/cat/dog' or '/cat/dog'</p> 
-     * <p>Note, that in contrast to {@link #REP_GLOB}</p> no wildcard characters are used to specify the restriction.
-     * <p>Note, that an empty value array will never match any path/item.</p>
-     * <p>Note, that null values and empty string values will be omitted.</p>
+     * <p>Note, that variants of 'cat'-paths could also consist of multiple segments like e.g. '/cat/dog' or '/cat/dog'
+     * <p>Note, that in contrast to {@link #REP_GLOB} no wildcard characters are used to specify the restriction.
+     * <p>Note, that an empty value array will never match any path/item.
+     * <p>Note, that null values and empty string values will be omitted.
      */
     String REP_SUBTREES = "rep:subtrees";
 
@@ -145,11 +142,11 @@ public interface AccessControlConstants {
      */
     String NT_REP_RESTRICTIONS = "rep:Restrictions";
 
-    Collection<String> POLICY_NODE_NAMES = ImmutableSet.of(REP_POLICY, REP_REPO_POLICY);
+    Collection<String> POLICY_NODE_NAMES = Set.of(REP_POLICY, REP_REPO_POLICY);
 
-    Collection<String> ACE_PROPERTY_NAMES = ImmutableSet.of(REP_PRINCIPAL_NAME, REP_PRIVILEGES);
+    Collection<String> ACE_PROPERTY_NAMES = Set.of(REP_PRINCIPAL_NAME, REP_PRIVILEGES);
 
-    Collection<String> AC_NODETYPE_NAMES = ImmutableSet.of(NT_REP_POLICY, NT_REP_ACL, NT_REP_ACE, NT_REP_DENY_ACE, NT_REP_GRANT_ACE, NT_REP_RESTRICTIONS);
+    Collection<String> AC_NODETYPE_NAMES = Set.of(NT_REP_POLICY, NT_REP_ACL, NT_REP_ACE, NT_REP_DENY_ACE, NT_REP_GRANT_ACE, NT_REP_RESTRICTIONS);
 
     String PARAM_RESTRICTION_PROVIDER = "restrictionProvider";
 }
