@@ -16,62 +16,57 @@
  */
 package org.apache.jackrabbit.oak.plugins.document;
 
+import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.toSet;
+import static org.apache.jackrabbit.oak.commons.conditions.Validate.checkArgument;
+import static org.apache.jackrabbit.oak.plugins.document.Collection.NODES;
+import static org.apache.jackrabbit.oak.plugins.document.StableRevisionComparator.REVERSE;
+import static org.apache.jackrabbit.oak.plugins.document.util.Utils.abortingIterable;
+import static org.apache.jackrabbit.oak.plugins.document.util.Utils.resolveCommitRevision;
+import static org.apache.jackrabbit.oak.plugins.document.UpdateOp.Key;
+import static org.apache.jackrabbit.oak.plugins.document.UpdateOp.Operation;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.NavigableMap;
+import java.util.Objects;
 import java.util.Queue;
 import java.util.Set;
 import java.util.SortedMap;
 import java.util.SortedSet;
 import java.util.TreeMap;
+import java.util.TreeSet;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Function;
+import java.util.function.Predicate;
 
-import org.apache.jackrabbit.guava.common.base.Function;
-import org.apache.jackrabbit.guava.common.base.Predicate;
-import org.apache.jackrabbit.guava.common.collect.AbstractIterator;
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Lists;
-import org.apache.jackrabbit.guava.common.collect.Ordering;
-import org.apache.jackrabbit.guava.common.collect.Queues;
+import org.apache.jackrabbit.guava.common.cache.Cache;
+import org.apache.jackrabbit.oak.commons.collections.AbstractIterator;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.DequeUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.commons.json.JsopBuilder;
 import org.apache.jackrabbit.oak.commons.json.JsopReader;
 import org.apache.jackrabbit.oak.commons.json.JsopTokenizer;
 import org.apache.jackrabbit.oak.commons.json.JsopWriter;
+import org.apache.jackrabbit.oak.commons.log.LogSilencer;
 import org.apache.jackrabbit.oak.plugins.document.memory.MemoryDocumentStore;
-import org.apache.jackrabbit.oak.plugins.document.util.LogSilencer;
+import org.apache.jackrabbit.oak.plugins.document.util.StringValue;
 import org.apache.jackrabbit.oak.plugins.document.util.Utils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Maps;
-import org.apache.jackrabbit.guava.common.collect.Sets;
-
-import static org.apache.jackrabbit.guava.common.base.Objects.equal;
-import static org.apache.jackrabbit.guava.common.base.Preconditions.checkArgument;
-import static org.apache.jackrabbit.guava.common.base.Preconditions.checkNotNull;
-import static org.apache.jackrabbit.guava.common.collect.ImmutableList.copyOf;
-import static org.apache.jackrabbit.guava.common.collect.Iterables.filter;
-import static org.apache.jackrabbit.guava.common.collect.Iterables.mergeSorted;
-import static org.apache.jackrabbit.guava.common.collect.Iterables.transform;
-import static java.util.Objects.requireNonNull;
-import static org.apache.jackrabbit.oak.plugins.document.Collection.NODES;
-import static org.apache.jackrabbit.oak.plugins.document.StableRevisionComparator.REVERSE;
-import static org.apache.jackrabbit.oak.plugins.document.UpdateOp.Key;
-import static org.apache.jackrabbit.oak.plugins.document.UpdateOp.Operation;
-import static org.apache.jackrabbit.oak.plugins.document.util.Utils.abortingIterable;
-import static org.apache.jackrabbit.oak.plugins.document.util.Utils.resolveCommitRevision;
 
 /**
  * A document storing data about a node.
@@ -88,6 +83,7 @@ public final class NodeDocument extends Document {
     }
 
     static final Logger LOG = LoggerFactory.getLogger(NodeDocument.class);
+    static final Logger PREV_NO_PROP_LOG = LoggerFactory.getLogger(NodeDocument.class + ".prevNoProp");
 
     private static final LogSilencer LOG_SILENCER = new LogSilencer();
 
@@ -143,8 +139,7 @@ public final class NodeDocument extends Document {
      */
     static final int MODIFIED_IN_SECS_RESOLUTION = 5;
 
-    private static final NavigableMap<Revision, Range> EMPTY_RANGE_MAP =
-            Maps.unmodifiableNavigableMap(new TreeMap<Revision, Range>(REVERSE));
+    private static final NavigableMap<Revision, Range> EMPTY_RANGE_MAP = Collections.unmodifiableNavigableMap(new TreeMap<>(REVERSE));
 
     /**
      * The list of revision to root commit depth mappings to find out if a
@@ -168,7 +163,7 @@ public final class NodeDocument extends Document {
     /**
      * Whether this node is deleted. Key: revision, value: true/false.
      */
-    private static final String DELETED = "_deleted";
+    static final String DELETED = "_deleted";
 
     /**
      * Flag indicating that whether this node was ever deleted. Its just used as
@@ -227,7 +222,7 @@ public final class NodeDocument extends Document {
     /**
      * Contains revision entries for changes done by branch commits.
      */
-    private static final String BRANCH_COMMITS = "_bc";
+    static final String BRANCH_COMMITS = "_bc";
 
     /**
      * The revision set by the background document sweeper. The revision
@@ -376,7 +371,7 @@ public final class NodeDocument extends Document {
      *                     in case of being resurrected from a serialized for
      */
     public NodeDocument(@NotNull DocumentStore store, long creationTime) {
-        this.store = checkNotNull(store);
+        this.store = requireNonNull(store);
         this.creationTime = creationTime;
     }
 
@@ -524,7 +519,7 @@ public final class NodeDocument extends Document {
      */
     @NotNull
     public Map<Integer, Revision> getLastRev() {
-        Map<Integer, Revision> map = Maps.newHashMap();
+        Map<Integer, Revision> map = new HashMap<>();
         Map<Revision, String> valueMap = getLocalMap(LAST_REV);
         for (Map.Entry<Revision, String> e : valueMap.entrySet()) {
             int clusterId = e.getKey().getClusterId();
@@ -567,7 +562,6 @@ public final class NodeDocument extends Document {
      *     <bold>Note</bold> - This method should only be invoked upon startup
      *     as then only we can safely assume that these revisions would not be
      *     committed
-     * </p>
      *
      * @param clusterId the clusterId.
      * @param batchSize the batch size to purge uncommitted revisions
@@ -607,6 +601,10 @@ public final class NodeDocument extends Document {
             if (!Utils.isCommitted(commitValue) && r.getClusterId() == clusterId && olderThanLastWrittenRootRevPredicate.test(r)) {
                 uniqueRevisions.add(r);
                 removeBranchCommit(op, r);
+                if (op.getId().equals(Utils.getIdFromPath(Path.ROOT))
+                        && getLocalCommitRoot().containsKey(r)) {
+                    removeCommitRoot(op, r);
+                }
             }
             if (op.getChanges().size() >= batchSize) {
                 store.findAndUpdate(Collection.NODES, op);
@@ -662,9 +660,9 @@ public final class NodeDocument extends Document {
      */
     @NotNull
     Set<Revision> getConflictsFor(@NotNull Iterable<Revision> changes) {
-        checkNotNull(changes);
+        requireNonNull(changes);
 
-        Set<Revision> conflicts = Sets.newHashSet();
+        Set<Revision> conflicts = new HashSet<>();
         Map<Revision, String> collisions = getLocalMap(COLLISIONS);
         for (Revision r : changes) {
             String value = collisions.get(r.asTrunkRevision());
@@ -739,10 +737,10 @@ public final class NodeDocument extends Document {
         // the clusterIds to check when walking the changes
         Set<Integer> clusterIds = Collections.emptySet();
         if (!getPreviousRanges().isEmpty()) {
-            clusterIds = Sets.newHashSet();
+            clusterIds = new HashSet<>();
             for (Revision prevRev : getPreviousRanges().keySet()) {
                 if (lower.isRevisionNewer(prevRev) ||
-                        equal(prevRev, lower.getRevision(prevRev.getClusterId()))) {
+                        Objects.equals(prevRev, lower.getRevision(prevRev.getClusterId()))) {
                     clusterIds.add(prevRev.getClusterId());
                 }
             }
@@ -758,8 +756,8 @@ public final class NodeDocument extends Document {
         }
         // if we don't have clusterIds, we can use the local changes only
         boolean fullScan = true;
-        Iterable<Revision> changes = Iterables.mergeSorted(
-                ImmutableList.of(
+        Iterable<Revision> changes = IterableUtils.mergeSorted(
+                List.of(
                         getLocalRevisions().keySet(),
                         getLocalCommitRoot().keySet()),
                 getLocalRevisions().comparator()
@@ -769,8 +767,8 @@ public final class NodeDocument extends Document {
             // contain changes after 'lower' revision vector
             // include previous documents as well (only needed in rare cases)
             fullScan = false;
-            changes = Iterables.mergeSorted(
-                    ImmutableList.of(
+            changes = IterableUtils.mergeSorted(
+                    List.of(
                             changes,
                             getChanges(REVISIONS, lower),
                             getChanges(COMMIT_ROOT, lower)
@@ -782,8 +780,8 @@ public final class NodeDocument extends Document {
                         changeRev, getId(), getLocalRevisions(), getLocalCommitRoot());
             }
         }
-        Map<Integer, Revision> newestRevs = Maps.newHashMap();
-        Map<Revision, String> validRevisions = Maps.newHashMap();
+        Map<Integer, Revision> newestRevs = new HashMap<>();
+        Map<Revision, String> validRevisions = new HashMap<>();
         for (Revision r : changes) {
             if (r.equals(changeRev)) {
                 continue;
@@ -929,6 +927,53 @@ public final class NodeDocument extends Document {
     }
 
     /**
+     * Resolve the commit revision that holds the current value of a property based
+     * on provided readRevision if the current value is in the local
+     * map - null if the current value might be in a split doc or the node or property
+     * does not exist at all.
+     *
+     * @param nodeStore    the node store.
+     * @param readRevision the read revision.
+     * @param key          the key of the property to resolve
+     * @return a Revision if the value of the property resolves to a value based
+     *         on what's in the local document, null if the node or property does
+     *         not exist at all or the value is in a split document.
+     */
+    Revision localCommitRevisionOfProperty(@NotNull DocumentNodeStore nodeStore,
+                                           @NotNull RevisionVector readRevision,
+                                           @NotNull String key) {
+        Map<Revision, String> validRevisions = new HashMap<>();
+        Branch branch = nodeStore.getBranches().getBranch(readRevision);
+        LastRevs lastRevs = createLastRevs(readRevision,
+                nodeStore, branch, null);
+
+        Revision min = getLiveRevision(nodeStore, readRevision, validRevisions, lastRevs);
+        if (min == null) {
+            // node is deleted
+            return null;
+        }
+
+        // ignore when local map is empty (OAK-2442)
+        SortedMap<Revision, String> local = getLocalMap(key);
+        if (local.isEmpty()) {
+            return null;
+        }
+
+        // first check local map, which contains most recent values
+        Value value = getLatestValue(nodeStore, local.entrySet(),
+                readRevision, validRevisions, lastRevs);
+        if (value == null) {
+            return null;
+        }
+        // check if there may be more recent values in a previous document
+        if (requiresCompleteMapCheck(value, local, nodeStore)) {
+            return null;
+        } else {
+            return value.valueEntry.getKey();
+        }
+    }
+
+    /**
      * Returns a {@link DocumentNodeState} as seen at the given
      * <code>readRevision</code>.
      *
@@ -945,7 +990,7 @@ public final class NodeDocument extends Document {
     public DocumentNodeState getNodeAtRevision(@NotNull DocumentNodeStore nodeStore,
                                                @NotNull RevisionVector readRevision,
                                                @Nullable Revision lastModified) {
-        Map<Revision, String> validRevisions = Maps.newHashMap();
+        Map<Revision, String> validRevisions = new HashMap<>();
         Branch branch = nodeStore.getBranches().getBranch(readRevision);
         LastRevs lastRevs = createLastRevs(readRevision,
                 nodeStore, branch, lastModified);
@@ -956,7 +1001,7 @@ public final class NodeDocument extends Document {
             return null;
         }
         Path path = getPath();
-        List<PropertyState> props = Lists.newArrayList();
+        List<PropertyState> props = new ArrayList<>();
         for (String key : keySet()) {
             if (!Utils.isPropertyName(key)) {
                 continue;
@@ -970,29 +1015,34 @@ public final class NodeDocument extends Document {
             Value value = getLatestValue(nodeStore, local.entrySet(),
                     readRevision, validRevisions, lastRevs);
 
-            // check if there may be more recent values in a previous document
-            if (value != null
-                    && !getPreviousRanges().isEmpty()
-                    && !isMostRecentCommitted(local, value.revision, nodeStore)) {
-                // not reading the most recent value, we may need to
-                // consider previous documents as well
-                for (Revision prev : getPreviousRanges().keySet()) {
-                    if (prev.compareRevisionTimeThenClusterId(value.revision) > 0) {
-                        // a previous document has more recent changes
-                        // than value.revision
-                        value = null;
-                        break;
-                    }
-                }
+            if (value == null
+                    // only filter if prevNoProp feature toggle is enabled:
+                    && nodeStore.getPrevNoPropCache() != null
+                    && !anyRevisionCommitted(local.keySet(), nodeStore, validRevisions)) {
+                // OAK-11184 : if the locally resolved value is null AND
+                // there are no committed revisions in the local map at all,
+                // then don't scan previous documents as that should not
+                // find anything. The split algorithm always ensures
+                // that at least one committed revision remains in the
+                // local map. From that we can derive that if there's
+                // no committed revision in the local map, there isn't
+                // any in previous documents neither.
+                // This should only occur when a property is being newly
+                // added or was deleted, then fullGC-ed and now re-added.
+                PREV_NO_PROP_LOG.debug("getNodeAtRevision : skipping as no committed revision locally for path={}, key={}", path, key);
+                continue;
             }
+
+            // check if there may be more recent values in a previous document
+            value = requiresCompleteMapCheck(value, local, nodeStore) ? null : value;
 
             if (value == null && !getPreviousRanges().isEmpty()) {
                 // check revision history
-                value = getLatestValue(nodeStore, getVisibleChanges(key, readRevision),
+                value = getLatestValue(nodeStore, getVisibleChanges(key, readRevision, nodeStore.getPrevNoPropCache()),
                         readRevision, validRevisions, lastRevs);
             }
             String propertyName = Utils.unescapePropertyName(key);
-            String v = value != null ? value.value : null;
+            String v = value != null ? value.valueEntry.getValue() : null;
             if (v != null){
                 props.add(nodeStore.createPropertyState(propertyName, v));
             }
@@ -1051,6 +1101,37 @@ public final class NodeDocument extends Document {
     }
 
     /**
+     * Checks if any of the provided revisions are committed - given the
+     * RevisionContext. Uses validRevisions as cached earlier
+     * confirmed valid revisions (but chooses not to add to that map, to limit
+     * side-effects of this new-ish method).
+     *
+     * @param revisions      the revisions to check if any of them are committed
+     * @param context        the RevisionContext to use for commit value resolving
+     * @param validRevisions map of revision to commit value considered valid
+     *                       against the given readRevision.
+     * @return true if the provided (local) map of revisions (of a property) has
+     * any revisions that are committed (irrespective of visible or not).
+     */
+    private boolean anyRevisionCommitted(Set<Revision> revisions, @NotNull RevisionContext context,
+            Map<Revision, String> validRevisions) {
+        for (Revision propRev : revisions) {
+            String commitValue = validRevisions.get(propRev);
+            if (commitValue == null) {
+                commitValue = context.getCommitValue(propRev, this);
+            }
+            if (commitValue == null) {
+                // then it's not committed
+                continue;
+            }
+            if (Utils.isCommitted(commitValue)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    /**
      * Get the earliest (oldest) revision where the node was alive at or before
      * the provided revision, if the node was alive at the given revision.
      *
@@ -1067,14 +1148,17 @@ public final class NodeDocument extends Document {
                                     RevisionVector readRevision,
                                     Map<Revision, String> validRevisions,
                                     LastRevs lastRevs) {
+        final SortedMap<Revision, String> local = getLocalDeleted();
         // check local deleted map first
-        Value value = getLatestValue(context, getLocalDeleted().entrySet(), readRevision, validRevisions, lastRevs);
+        Value value = getLatestValue(context, local.entrySet(), readRevision, validRevisions, lastRevs);
+        // check if there may be more recent values in a previous document
+        value = requiresCompleteMapCheck(value, local, context) ? null : value;
         if (value == null && !getPreviousRanges().isEmpty()) {
             // need to check complete map
             value = getLatestValue(context, getDeleted().entrySet(), readRevision, validRevisions, lastRevs);
         }
 
-        return value != null && "false".equals(value.value) ? value.revision : null;
+        return value != null && "false".equals(value.valueEntry.getValue()) ? value.revision : null;
     }
 
     /**
@@ -1269,7 +1353,7 @@ public final class NodeDocument extends Document {
                 }
                 transformed.put(r.high, r);
             }
-            ranges = Maps.unmodifiableNavigableMap(transformed);
+            ranges = Collections.unmodifiableNavigableMap(transformed);
         }
         return ranges;
     }
@@ -1312,21 +1396,12 @@ public final class NodeDocument extends Document {
             }
 
             // didn't find entry -> scan through remaining head ranges
-            return filter(transform(getPreviousRanges().headMap(revision).entrySet(),
-                    new Function<Map.Entry<Revision, Range>, NodeDocument>() {
-                @Override
-                public NodeDocument apply(Map.Entry<Revision, Range> input) {
+            return IterableUtils.filter(IterableUtils.transform(getPreviousRanges().headMap(revision).entrySet(), input -> {
                     if (input.getValue().includes(revision)) {
                        return getPreviousDoc(input.getKey(), input.getValue());
                     }
                     return null;
-                }
-            }), new Predicate<NodeDocument>() {
-                @Override
-                public boolean apply(@Nullable NodeDocument input) {
-                    return input != null && input.getValueMap(property).containsKey(revision);
-                }
-            });
+                }), input ->input != null && input.getValueMap(property).containsKey(revision));
         }
     }
 
@@ -1354,7 +1429,7 @@ public final class NodeDocument extends Document {
         //on property that all prevDoc id would starts <depth+2>:p/path/to/node
         return new AbstractIterator<NodeDocument>(){
             private Queue<Map.Entry<Revision, Range>> previousRanges =
-                    Queues.newArrayDeque(getPreviousRanges().entrySet());
+                    DequeUtils.toArrayDeque(getPreviousRanges().entrySet());
             @Override
             protected NodeDocument computeNext() {
                 if(!previousRanges.isEmpty()){
@@ -1385,7 +1460,7 @@ public final class NodeDocument extends Document {
             return Collections.emptyIterator();
         }
         // create a mutable copy
-        final NavigableMap<Revision, Range> ranges = Maps.newTreeMap(getPreviousRanges());
+        final NavigableMap<Revision, Range> ranges = new TreeMap<>(getPreviousRanges());
         return new AbstractIterator<NodeDocument>() {
             @Override
             protected NodeDocument computeNext() {
@@ -1416,10 +1491,13 @@ public final class NodeDocument extends Document {
         };
     }
 
+    private String getPreviousDocId(Revision rev, Range range) {
+        return Utils.getPreviousIdFor(getMainPath(), rev, range.height);
+    }
+
     @Nullable
     private NodeDocument getPreviousDoc(Revision rev, Range range){
-        int h = range.height;
-        String prevId = Utils.getPreviousIdFor(getMainPath(), rev, h);
+        String prevId = getPreviousDocId(rev, range);
         NodeDocument prev = getPreviousDocument(prevId);
         if (prev != null) {
             return prev;
@@ -1474,7 +1552,7 @@ public final class NodeDocument extends Document {
      */
     Iterable<Revision> getAllChanges() {
         RevisionVector empty = new RevisionVector();
-        return Iterables.mergeSorted(ImmutableList.of(
+        return IterableUtils.mergeSorted(List.of(
                 getChanges(REVISIONS, empty),
                 getChanges(COMMIT_ROOT, empty)
         ), StableRevisionComparator.REVERSE);
@@ -1493,13 +1571,8 @@ public final class NodeDocument extends Document {
     @NotNull
     Iterable<Revision> getChanges(@NotNull final String property,
                                   @NotNull final RevisionVector min) {
-        Predicate<Revision> p = new Predicate<Revision>() {
-            @Override
-            public boolean apply(Revision input) {
-                return min.isRevisionNewer(input);
-            }
-        };
-        List<Iterable<Revision>> changes = Lists.newArrayList();
+        Predicate<Revision> p = input -> min.isRevisionNewer(input);
+        List<Iterable<Revision>> changes = new ArrayList<>();
         changes.add(abortingIterable(getLocalMap(property).keySet(), p));
         for (Map.Entry<Revision, Range> e : getPreviousRanges().entrySet()) {
             if (min.isRevisionNewer(e.getKey())) {
@@ -1512,7 +1585,7 @@ public final class NodeDocument extends Document {
         if (changes.size() == 1) {
             return changes.get(0);
         } else {
-            return Iterables.mergeSorted(changes, StableRevisionComparator.REVERSE);
+            return IterableUtils.mergeSorted(changes, StableRevisionComparator.REVERSE);
         }
     }
 
@@ -1524,32 +1597,61 @@ public final class NodeDocument extends Document {
      *
      * @param property the name of the property.
      * @param readRevision the read revision vector.
+     * @param prevNoPropCache optional cache for remembering non existence
+     * of any property revisions in previous documents (by their id)
      * @return property changes visible from the given read revision vector.
      */
     @NotNull
     Iterable<Map.Entry<Revision, String>> getVisibleChanges(@NotNull final String property,
-                                                            @NotNull final RevisionVector readRevision) {
-        Predicate<Map.Entry<Revision, String>> p = new Predicate<Map.Entry<Revision, String>>() {
-            @Override
-            public boolean apply(Map.Entry<Revision, String> input) {
-                return !readRevision.isRevisionNewer(input.getKey());
-            }
-        };
-        List<Iterable<Map.Entry<Revision, String>>> changes = Lists.newArrayList();
+                                                            @NotNull final RevisionVector readRevision,
+                                                            @Nullable final Cache<StringValue, StringValue> prevNoPropCache) {
+        return getVisibleChanges(property, readRevision, prevNoPropCache, null);
+    }
+
+    /**
+     * Variation of getVisibleChanges that allows to provide a non-null propRevFound.
+     * The latter is used to detect whether previous documents had any property revisions at all.
+     * This method is invoked in two different ways:
+     * <ul>
+     * <li>prevNoPropCache != null : this is used in the top most invocation only and
+     * when passed causes top level previous documents to be handled via the cache.
+     * To do that, for these cases the
+     * changesFor method will do iterable-yoga to sneak into the iterator() code while
+     * having taken note of whether any previous document had any revision at all for the
+     * given property (this later aspect is checked in getVisibleChanges in a child iteration).</li>
+     * <li>prevNoPropCache == null : this is used in invocations on all previous documents.
+     * In this case the method checks if there are any revisions for the given property.
+     * If there are, then the provided propRevFound AtomicBoolean is set to true.
+     * That information is then used in the top most call in this getVisibleChanges-iteration
+     * to decide whether we can cache the fact that no propery (whatsoever) was found in the
+     * given previous document (and all its children) or not. That decision is based on the
+     * AtomciBoolean being true or false.</li>
+     * </ul>
+     */
+    @NotNull
+    Iterable<Map.Entry<Revision, String>> getVisibleChanges(@NotNull final String property,
+                                                            @NotNull final RevisionVector readRevision,
+                                                            @Nullable final Cache<StringValue, StringValue> prevNoPropCache,
+                                                            @Nullable final AtomicBoolean propRevFound) {
+        Predicate<Map.Entry<Revision, String>> p = input -> !readRevision.isRevisionNewer(input.getKey());
+        List<Iterable<Map.Entry<Revision, String>>> changes = new ArrayList<>();
         Map<Revision, String> localChanges = getLocalMap(property);
         if (!localChanges.isEmpty()) {
-            changes.add(filter(localChanges.entrySet(), p));
+            if (propRevFound != null) {
+                propRevFound.set(true);
+            }
+            changes.add(IterableUtils.filter(localChanges.entrySet(), p::test));
         }
 
         for (Revision r : readRevision) {
             // collect changes per clusterId
-            collectVisiblePreviousChanges(property, r, changes);
+            collectVisiblePreviousChanges(property, r, changes, prevNoPropCache, propRevFound);
         }
 
         if (changes.size() == 1) {
             return changes.get(0);
         } else {
-            return mergeSorted(changes, ValueComparator.REVERSE);
+            return IterableUtils.mergeSorted(changes, ValueComparator.REVERSE);
         }
     }
 
@@ -1565,8 +1667,10 @@ public final class NodeDocument extends Document {
      */
     private void collectVisiblePreviousChanges(@NotNull final String property,
                                                @NotNull final Revision readRevision,
-                                               @NotNull final List<Iterable<Entry<Revision, String>>> changes) {
-        List<Iterable<Map.Entry<Revision, String>>> revs = Lists.newArrayList();
+                                               @NotNull final List<Iterable<Entry<Revision, String>>> changes,
+                                               @Nullable final Cache<StringValue, StringValue> prevNoPropCache,
+                                               @Nullable final AtomicBoolean propRevFound) {
+        List<Iterable<Map.Entry<Revision, String>>> revs = new ArrayList<>();
 
         RevisionVector readRV = new RevisionVector(readRevision);
         List<Range> ranges = new ArrayList<>();
@@ -1591,7 +1695,7 @@ public final class NodeDocument extends Document {
                     previous = r;
                 }
             }
-            revs.add(changesFor(batch, readRV, property));
+            revs.add(changesFor(batch, readRV, property, prevNoPropCache, propRevFound));
             batch.clear();
         }
 
@@ -1600,7 +1704,7 @@ public final class NodeDocument extends Document {
             changes.add(revs.get(0));
         } else if (!revs.isEmpty()) {
             // merge sort them
-            changes.add(mergeSorted(revs, ValueComparator.REVERSE));
+            changes.add(IterableUtils.mergeSorted(revs, ValueComparator.REVERSE));
         }
     }
 
@@ -1616,21 +1720,85 @@ public final class NodeDocument extends Document {
      */
     private Iterable<Map.Entry<Revision, String>> changesFor(final List<Range> ranges,
                                                              final RevisionVector readRev,
-                                                             final String property) {
+                                                             final String property,
+                                                             @Nullable final Cache<StringValue, StringValue> prevNoPropCache,
+                                                             @Nullable final AtomicBoolean parentPropRevFound) {
         if (ranges.isEmpty()) {
             return Collections.emptyList();
         }
-        final Function<Range, Iterable<Map.Entry<Revision, String>>> rangeToChanges =
-                new Function<Range, Iterable<Map.Entry<Revision, String>>>() {
-            @Override
-            public Iterable<Map.Entry<Revision, String>> apply(Range input) {
+
+        final Function<Range, Iterable<Map.Entry<Revision, String>>> rangeToChanges;
+        if (prevNoPropCache != null && parentPropRevFound == null) {
+            // then we are in the main doc. at this point we thus need to
+            // check the cache, if miss then scan prev docs and cache the result
+            //TODO: consider refactoring of the getVisibleChanges/collectVisiblePreviousChanges/changesFor
+            // logic. The way these methods create a sequence of Iterables and lambdas make
+            // for a rather complex logic that is difficult to fiddle with.
+            // It might thus be worth while to look into some loop logic rather than iteration here.
+            // Except that refactoring is likely a bigger task, hence postponed for now.
+            rangeToChanges = input -> {
+                    final String prevDocId = getPreviousDocId(input.high, input);
+                    final StringValue cacheKey = new StringValue(property + "@" + prevDocId);
+                    if (prevNoPropCache.getIfPresent(cacheKey) != null) {
+                        // cache hit, awesome!
+                        // (we're not interested in the actual cache value btw, as finding 
+                        // a cache value actually indicates "the property does not exist 
+                        // in any previous document whatsoever" - no need for value check)
+                        PREV_NO_PROP_LOG.trace("changesFor : empty changes cache hit for cacheKey={}", cacheKey);
+                        return Collections.emptyList();
+                    }
+                    // cache miss - let's do the heavy lifting then
+                    NodeDocument doc = getPreviousDoc(input.high, input);
+                    if (doc == null) {
+                        // this could be a candidate for caching probably.
+                        // but might also indicate some race-condition.
+                        // so let's not cache for now.
+                        return Collections.emptyList();
+                    }
+                    // initiate counting
+                    final AtomicBoolean childrenPropRevFound = new AtomicBoolean(false);
+                    // create that Iterable - but wrap it so that we know how many
+                    // property revisions were actually found in the scan.
+                    // (we're mostly interested if that's zero ro non-zero though)
+                    final Iterable<Entry<Revision, String>> vc = doc.getVisibleChanges(property, readRev, null, childrenPropRevFound);
+                    // wrap that Iterable to intercept the call to hasNext().
+                    // at that point if the counter is non-null it means
+                    // that any previous documents scanned does indeed have
+                    // the property we're interested in. It might not be visible
+                    // or committed, but at least it does have it.
+                    // In which case we'd skip that. But if it does not exist
+                    // at all, then we cache that fact.
+                    return new Iterable<Entry<Revision, String>>() {
+                        @Override
+                        public Iterator<Entry<Revision, String>> iterator() {
+                            // grab the iterator - this typically triggers previous doc scan
+                            final Iterator<Entry<Revision, String>> wrappee = vc.iterator();
+                            // but let's invoke hasNext here explicitly still. to ensure
+                            // we do indeed scan - without a scan hasNext can't work
+                            wrappee.hasNext();
+                            if (!childrenPropRevFound.get()) {
+                                // then let's cache that
+                                PREV_NO_PROP_LOG.debug("changesFor : caching empty changes for cacheKey={}", cacheKey);
+                                prevNoPropCache.put(cacheKey, StringValue.EMPTY);
+                            }
+                            return wrappee;
+                        }
+                    };
+                };
+        } else {
+            // without a cache either the caller is not interested at caching,
+            // or we are within a previous doc reading n+1 level previous docs.
+            // in both cases nothing much to do other than passing along the
+            // counter (propRevCount).
+            // also no caching other than in the main doc
+            rangeToChanges = input -> {
                 NodeDocument doc = getPreviousDoc(input.high, input);
                 if (doc == null) {
                     return Collections.emptyList();
                 }
-                return doc.getVisibleChanges(property, readRev);
-            }
-        };
+                return doc.getVisibleChanges(property, readRev, null, parentPropRevFound);
+            };
+        }
 
         Iterable<Map.Entry<Revision, String>> changes;
         if (ranges.size() == 1) {
@@ -1643,14 +1811,9 @@ public final class NodeDocument extends Document {
                 }
             };
         } else {
-            changes = Iterables.concat(transform(copyOf(ranges), rangeToChanges));
+            changes = IterableUtils.chainedIterable(IterableUtils.transform(List.copyOf(ranges), rangeToChanges::apply));
         }
-        return filter(changes, new Predicate<Entry<Revision, String>>() {
-            @Override
-            public boolean apply(Entry<Revision, String> input) {
-                return !readRev.isRevisionNewer(input.getKey());
-            }
-        });
+        return IterableUtils.filter(changes, input -> !readRev.isRevisionNewer(input.getKey()));
     }
 
     /**
@@ -1667,6 +1830,24 @@ public final class NodeDocument extends Document {
             map = ValueMap.EMPTY;
         }
         return map;
+    }
+
+    /**
+     * Returns name of all the properties on this document
+     * <p>
+     * Note: property names returned are escaped
+     *
+     * @return Set of all property names (escaped)
+     * @see Utils#unescapePropertyName(String)
+     * @see Utils#escapePropertyName(String)
+     */
+    @NotNull
+    Set<String> getPropertyNames() {
+        return data
+                .keySet()
+                .stream()
+                .filter(Utils::isPropertyName)
+                .collect(toSet());
     }
 
     /**
@@ -1728,37 +1909,32 @@ public final class NodeDocument extends Document {
      */
     @NotNull
     RevisionVector getSweepRevisions() {
-        return new RevisionVector(transform(getLocalMap(SWEEP_REV).values(),
-                new Function<String, Revision>() {
-                    @Override
-                    public Revision apply(String s) {
-                        return Revision.fromString(s);
-                    }
-                }));
+        return new RevisionVector(IterableUtils.transform(getLocalMap(SWEEP_REV).values(),
+                s -> Revision.fromString(s)));
     }
 
     //-------------------------< UpdateOp modifiers >---------------------------
 
     public static void setChildrenFlag(@NotNull UpdateOp op,
                                        boolean hasChildNode) {
-        checkNotNull(op).set(CHILDREN_FLAG, hasChildNode);
+        requireNonNull(op).set(CHILDREN_FLAG, hasChildNode);
     }
 
     public static void setModified(@NotNull UpdateOp op,
                                    @NotNull Revision revision) {
-        checkNotNull(op).max(MODIFIED_IN_SECS, getModifiedInSecs(checkNotNull(revision).getTimestamp()));
+        requireNonNull(op).max(MODIFIED_IN_SECS, getModifiedInSecs(requireNonNull(revision).getTimestamp()));
     }
 
     public static void setRevision(@NotNull UpdateOp op,
                                    @NotNull Revision revision,
                                    @NotNull String commitValue) {
-        checkNotNull(op).setMapEntry(REVISIONS,
-                checkNotNull(revision), checkNotNull(commitValue));
+        requireNonNull(op).setMapEntry(REVISIONS,
+                requireNonNull(revision), requireNonNull(commitValue));
     }
 
     public static void unsetRevision(@NotNull UpdateOp op,
                                      @NotNull Revision revision) {
-        checkNotNull(op).unsetMapEntry(REVISIONS, checkNotNull(revision));
+        requireNonNull(op).unsetMapEntry(REVISIONS, requireNonNull(revision));
     }
 
     public static boolean isRevisionsEntry(String name) {
@@ -1779,7 +1955,7 @@ public final class NodeDocument extends Document {
 
     public static void removeRevision(@NotNull UpdateOp op,
                                       @NotNull Revision revision) {
-        checkNotNull(op).removeMapEntry(REVISIONS, checkNotNull(revision));
+        requireNonNull(op).removeMapEntry(REVISIONS, requireNonNull(revision));
     }
 
     /**
@@ -1792,18 +1968,18 @@ public final class NodeDocument extends Document {
     public static void addCollision(@NotNull UpdateOp op,
                                     @NotNull Revision revision,
                                     @NotNull Revision other) {
-        checkNotNull(op).setMapEntry(COLLISIONS, checkNotNull(revision),
+        requireNonNull(op).setMapEntry(COLLISIONS, requireNonNull(revision),
                 other.toString());
     }
 
     public static void removeCollision(@NotNull UpdateOp op,
                                        @NotNull Revision revision) {
-        checkNotNull(op).removeMapEntry(COLLISIONS, checkNotNull(revision));
+        requireNonNull(op).removeMapEntry(COLLISIONS, requireNonNull(revision));
     }
 
     public static void setLastRev(@NotNull UpdateOp op,
                                   @NotNull Revision revision) {
-        checkNotNull(op).setMapEntry(LAST_REV,
+        requireNonNull(op).setMapEntry(LAST_REV,
                 new Revision(0, 0, revision.getClusterId()),
                 revision.toString());
     }
@@ -1811,18 +1987,18 @@ public final class NodeDocument extends Document {
     public static void setCommitRoot(@NotNull UpdateOp op,
                                      @NotNull Revision revision,
                                      int commitRootDepth) {
-        checkNotNull(op).setMapEntry(COMMIT_ROOT, checkNotNull(revision),
+        requireNonNull(op).setMapEntry(COMMIT_ROOT, requireNonNull(revision),
                 String.valueOf(commitRootDepth));
     }
 
     public static void removeCommitRoot(@NotNull UpdateOp op,
                                         @NotNull Revision revision) {
-        checkNotNull(op).removeMapEntry(COMMIT_ROOT, revision);
+        requireNonNull(op).removeMapEntry(COMMIT_ROOT, revision);
     }
 
     public static void unsetCommitRoot(@NotNull UpdateOp op,
                                        @NotNull Revision revision) {
-        checkNotNull(op).unsetMapEntry(COMMIT_ROOT, revision);
+        requireNonNull(op).unsetMapEntry(COMMIT_ROOT, revision);
     }
 
     public static void setDeleted(@NotNull UpdateOp op,
@@ -1833,71 +2009,71 @@ public final class NodeDocument extends Document {
             //possibly we can avoid that
             setDeletedOnce(op);
         }
-        checkNotNull(op).setMapEntry(DELETED, checkNotNull(revision), String.valueOf(deleted));
+        requireNonNull(op).setMapEntry(DELETED, requireNonNull(revision), String.valueOf(deleted));
     }
 
     public static void setDeletedOnce(@NotNull UpdateOp op) {
-        checkNotNull(op).set(DELETED_ONCE, Boolean.TRUE);
+        requireNonNull(op).set(DELETED_ONCE, Boolean.TRUE);
     }
 
     public static void removeDeleted(@NotNull UpdateOp op,
                                      @NotNull Revision revision) {
-        checkNotNull(op).removeMapEntry(DELETED, revision);
+        requireNonNull(op).removeMapEntry(DELETED, revision);
     }
 
     public static void setPrevious(@NotNull UpdateOp op,
                                    @NotNull Range range) {
-        checkNotNull(op).setMapEntry(PREVIOUS, checkNotNull(range).high,
+        requireNonNull(op).setMapEntry(PREVIOUS, requireNonNull(range).high,
                 range.getLowValue());
     }
 
     public static void removePrevious(@NotNull UpdateOp op,
                                       @NotNull Range range) {
-        removePrevious(op, checkNotNull(range).high);
+        removePrevious(op, requireNonNull(range).high);
     }
 
     public static void removePrevious(@NotNull UpdateOp op,
                                       @NotNull Revision revision) {
-        checkNotNull(op).removeMapEntry(PREVIOUS, checkNotNull(revision));
+        requireNonNull(op).removeMapEntry(PREVIOUS, requireNonNull(revision));
     }
 
     public static void setStalePrevious(@NotNull UpdateOp op,
                                         @NotNull Revision revision,
                                         int height) {
-        checkNotNull(op).setMapEntry(STALE_PREV,
-                checkNotNull(revision), String.valueOf(height));
+        requireNonNull(op).setMapEntry(STALE_PREV,
+                requireNonNull(revision), String.valueOf(height));
     }
 
     public static void removeStalePrevious(@NotNull UpdateOp op,
                                            @NotNull Revision revision) {
-        checkNotNull(op).removeMapEntry(STALE_PREV, checkNotNull(revision));
+        requireNonNull(op).removeMapEntry(STALE_PREV, requireNonNull(revision));
     }
 
     public static void setHasBinary(@NotNull UpdateOp op) {
-        checkNotNull(op).set(HAS_BINARY_FLAG, HAS_BINARY_VAL);
+        requireNonNull(op).set(HAS_BINARY_FLAG, HAS_BINARY_VAL);
     }
 
     public static void setBranchCommit(@NotNull UpdateOp op,
                                        @NotNull Revision revision) {
-        checkNotNull(op).setMapEntry(BRANCH_COMMITS,
+        requireNonNull(op).setMapEntry(BRANCH_COMMITS,
                 revision, String.valueOf(true));
     }
 
     public static void removeBranchCommit(@NotNull UpdateOp op,
                                           @NotNull Revision revision) {
-        checkNotNull(op).removeMapEntry(BRANCH_COMMITS, revision);
+        requireNonNull(op).removeMapEntry(BRANCH_COMMITS, revision);
     }
 
     public static void setSweepRevision(@NotNull UpdateOp op,
                                         @NotNull Revision revision) {
-        checkNotNull(op).setMapEntry(SWEEP_REV,
+        requireNonNull(op).setMapEntry(SWEEP_REV,
                 new Revision(0, 0, revision.getClusterId()),
                 revision.toString());
     }
 
     public static void hasLastRev(@NotNull UpdateOp op,
                                   @NotNull Revision revision) {
-        checkNotNull(op).equals(LAST_REV,
+        requireNonNull(op).equals(LAST_REV,
                 new Revision(0, 0, revision.getClusterId()),
                 revision.toString());
     }
@@ -1948,10 +2124,10 @@ public final class NodeDocument extends Document {
         // overlay with unsaved last modified from this instance
         lastRevs.update(pendingLastRev);
         // collect clusterIds
-        SortedSet<Revision> mostRecentChanges = Sets.newTreeSet(REVERSE);
+        SortedSet<Revision> mostRecentChanges = new TreeSet<>(REVERSE);
         mostRecentChanges.addAll(getLocalRevisions().keySet());
         mostRecentChanges.addAll(getLocalCommitRoot().keySet());
-        Set<Integer> clusterIds = Sets.newHashSet();
+        Set<Integer> clusterIds = new HashSet<>();
         for (Revision r : getLocalRevisions().keySet()) {
             clusterIds.add(r.getClusterId());
         }
@@ -2061,7 +2237,7 @@ public final class NodeDocument extends Document {
      */
     @NotNull
     private Path getPathAtDepth(@NotNull String depth) {
-        if (checkNotNull(depth).equals("0")) {
+        if (requireNonNull(depth).equals("0")) {
             return Path.ROOT;
         }
         Path p = getPath();
@@ -2182,6 +2358,34 @@ public final class NodeDocument extends Document {
     }
 
     /**
+     * Check if there may be more recent values in a previous document and thus a
+     * complete map check is required.
+     *
+     * @param localValue value as resolved from local value map
+     * @param local      local value map
+     * @param context    the revision context
+     * @return false if it is most recent, true otherwise
+     */
+    private boolean requiresCompleteMapCheck(@Nullable Value localValue,
+            @NotNull SortedMap<Revision, String> local,
+            @NotNull RevisionContext context) {
+        if (localValue != null
+                && !getPreviousRanges().isEmpty()
+                && !isMostRecentCommitted(local, localValue.revision, context)) {
+            // not reading the most recent value, we may need to
+            // consider previous documents as well
+            for (Revision prev : getPreviousRanges().keySet()) {
+                if (prev.compareRevisionTimeThenClusterId(localValue.revision) > 0) {
+                    // a previous document has more recent changes
+                    // than localValue.revision
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    /**
      * Get the latest property value smaller or equal the readRevision revision.
      *
      * @param valueMap the sorted revision-value map
@@ -2216,7 +2420,7 @@ public final class NodeDocument extends Document {
             }
 
             if (isValidRevision(context, propRev, commitValue, readRevision, validRevisions)) {
-                return new Value(commitRev, entry.getValue());
+                return new Value(commitRev, entry);
             }
         }
         return null;
@@ -2326,14 +2530,16 @@ public final class NodeDocument extends Document {
 
         final Revision revision;
         /**
-         * The value of a property at the given revision. A {@code null} value
+         * valueEntry contains both the underlying (commit) revision and
+         * the (String) value of a property. valueEntry is never null.
+         * valueEntry.getValue() being {@code null}
          * indicates the property was removed.
          */
-        final String value;
+        final Map.Entry<Revision, String> valueEntry;
 
-        Value(@NotNull Revision revision, @Nullable String value) {
-            this.revision = checkNotNull(revision);
-            this.value = value;
+        Value(@NotNull Revision mergeRevision, @NotNull Map.Entry<Revision, String> valueEntry) {
+            this.revision = requireNonNull(mergeRevision);
+            this.valueEntry = valueEntry;
         }
     }
 
@@ -2344,7 +2550,7 @@ public final class NodeDocument extends Document {
 
         static final Comparator<Entry<Revision, String>> REVERSE = Collections.reverseOrder(INSTANCE);
 
-        private static final Ordering<String> STRING_ORDERING = Ordering.natural().nullsFirst();
+        private static final Comparator<String> STRING_ORDERING = Comparator.nullsFirst(Comparator.naturalOrder());
 
         @Override
         public int compare(Entry<Revision, String> o1,
