@@ -16,7 +16,6 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.jackrabbit.oak.plugins.document.bundlor;
 
 import java.nio.ByteBuffer;
@@ -26,15 +25,13 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Lists;
-
 import org.apache.jackrabbit.oak.api.Blob;
 import org.apache.jackrabbit.oak.api.CommitFailedException;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
+import org.apache.jackrabbit.oak.commons.collections.ListUtils;
 import org.apache.jackrabbit.oak.plugins.document.Collection;
 import org.apache.jackrabbit.oak.plugins.document.Document;
 import org.apache.jackrabbit.oak.plugins.document.DocumentMKBuilderProvider;
@@ -46,6 +43,7 @@ import org.apache.jackrabbit.oak.plugins.document.RandomStream;
 import org.apache.jackrabbit.oak.plugins.document.TestNodeObserver;
 import org.apache.jackrabbit.oak.plugins.document.memory.MemoryDocumentStore;
 import org.apache.jackrabbit.oak.plugins.document.persistentCache.CacheType;
+import org.apache.jackrabbit.oak.plugins.document.init.BundlingConfigInitializer;
 import org.apache.jackrabbit.oak.plugins.document.util.Utils;
 import org.apache.jackrabbit.oak.InitialContent;
 import org.apache.jackrabbit.oak.spi.commit.CommitInfo;
@@ -67,9 +65,8 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 
-import static org.apache.jackrabbit.guava.common.base.Preconditions.checkNotNull;
-import static org.apache.jackrabbit.guava.common.collect.ImmutableList.copyOf;
 import static java.lang.String.format;
+import static java.util.Objects.requireNonNull;
 import static org.apache.commons.io.FileUtils.ONE_MB;
 import static org.apache.jackrabbit.JcrConstants.JCR_PRIMARYTYPE;
 import static org.apache.jackrabbit.oak.commons.PathUtils.concat;
@@ -156,7 +153,7 @@ public class DocumentBundlingTest {
         assertEquals("jcr:content", getBundlingPath(contentNode));
 
         assertEquals(1, contentNode.getPropertyCount());
-        assertEquals(1, Iterables.size(contentNode.getProperties()));
+        assertEquals(1, IterableUtils.size(contentNode.getProperties()));
 
         assertNull(getNodeDocument("/test/book.jpg/jcr:content"));
         assertNotNull(getNodeDocument("/test/book.jpg"));
@@ -309,7 +306,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
 
-        int childCount = Iterables.size(appNode.getChildNodeEntries());
+        int childCount = IterableUtils.size(appNode.getChildNodeEntries());
         assertEquals(1, childCount);
         assertEquals(0, ds.queryPaths.size());
 
@@ -342,7 +339,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
 
-        assertEquals(0, Iterables.size(getLatestNode("test/book.jpg/jcr:content/metadata").getChildNodeNames()));
+        assertEquals(0, IterableUtils.size(getLatestNode("test/book.jpg/jcr:content/metadata").getChildNodeNames()));
         assertEquals(0, ds.queryPaths.size());
 
         //Case 1 - Bundled root but no bundled child
@@ -359,7 +356,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
 
-        assertEquals(0, Iterables.size(getLatestNode("test/book.jpg").getChildNodeNames()));
+        assertEquals(0, IterableUtils.size(getLatestNode("test/book.jpg").getChildNodeNames()));
         assertEquals(0, getLatestNode("test/book.jpg").getChildNodeCount(100));
         assertEquals(0, ds.queryPaths.size());
 
@@ -368,7 +365,7 @@ public class DocumentBundlingTest {
         merge(builder);
 
         ds.reset();
-        assertEquals(1, Iterables.size(getLatestNode("test/book.jpg").getChildNodeNames()));
+        assertEquals(1, IterableUtils.size(getLatestNode("test/book.jpg").getChildNodeNames()));
         assertEquals(1, getLatestNode("test/book.jpg").getChildNodeCount(100));
         assertEquals(0, ds.queryPaths.size());
         assertTrue(hasNodeProperty("/test/book.jpg", META_PROP_BUNDLED_CHILD));
@@ -381,7 +378,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
 
-        assertEquals(1, Iterables.size(getLatestNode("test/book.jpg").getChildNodeNames()));
+        assertEquals(1, IterableUtils.size(getLatestNode("test/book.jpg").getChildNodeNames()));
         assertEquals(0, ds.queryPaths.size());
 
         NodeBuilder builder = store.getRoot().builder();
@@ -389,7 +386,7 @@ public class DocumentBundlingTest {
         merge(builder);
 
         ds.reset();
-        assertEquals(2, Iterables.size(getLatestNode("test/book.jpg").getChildNodeNames()));
+        assertEquals(2, IterableUtils.size(getLatestNode("test/book.jpg").getChildNodeNames()));
         assertEquals(1, ds.queryPaths.size());
 
         assertTrue(hasNodeProperty("/test/book.jpg", META_PROP_BUNDLED_CHILD));
@@ -402,7 +399,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
 
-        assertEquals(1, Iterables.size(getLatestNode("test/book.jpg").getChildNodeNames()));
+        assertEquals(1, IterableUtils.size(getLatestNode("test/book.jpg").getChildNodeNames()));
         assertEquals(0, ds.queryPaths.size());
 
         NodeBuilder builder = store.getRoot().builder();
@@ -410,7 +407,7 @@ public class DocumentBundlingTest {
         merge(builder);
 
         ds.reset();
-        assertEquals(0, Iterables.size(getLatestNode("test/book.jpg").getChildNodeNames()));
+        assertEquals(0, IterableUtils.size(getLatestNode("test/book.jpg").getChildNodeNames()));
         assertFalse(getLatestNode("test/book.jpg").hasChildNode("jcr:content"));
         assertEquals(0, ds.queryPaths.size());
 
@@ -423,7 +420,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
 
-        assertEquals(1, Iterables.size(getLatestNode("test/book.jpg").getChildNodeNames()));
+        assertEquals(1, IterableUtils.size(getLatestNode("test/book.jpg").getChildNodeNames()));
         assertEquals(1, ds.queryPaths.size());
 
         assertFalse(hasNodeProperty("/test/book.jpg", META_PROP_BUNDLED_CHILD));
@@ -438,7 +435,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
 
-        assertEquals(0, Iterables.size(getLatestNode("test/book.jpg/jcr:content").getChildNodeNames()));
+        assertEquals(0, IterableUtils.size(getLatestNode("test/book.jpg/jcr:content").getChildNodeNames()));
         assertEquals(0, ds.queryPaths.size());
 
         NodeBuilder builder = store.getRoot().builder();
@@ -446,7 +443,7 @@ public class DocumentBundlingTest {
         merge(builder);
 
         ds.reset();
-        assertEquals(1, Iterables.size(getLatestNode("test/book.jpg/jcr:content").getChildNodeNames()));
+        assertEquals(1, IterableUtils.size(getLatestNode("test/book.jpg/jcr:content").getChildNodeNames()));
         assertEquals(0, ds.queryPaths.size());
     }
 
@@ -458,7 +455,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
 
-        assertEquals(0, Iterables.size(getLatestNode("test/book.jpg/jcr:content/metadata").getChildNodeNames()));
+        assertEquals(0, IterableUtils.size(getLatestNode("test/book.jpg/jcr:content/metadata").getChildNodeNames()));
         assertEquals(0, ds.queryPaths.size());
 
         NodeBuilder builder = store.getRoot().builder();
@@ -466,7 +463,7 @@ public class DocumentBundlingTest {
         merge(builder);
 
         ds.reset();
-        assertEquals(1, Iterables.size(getLatestNode("test/book.jpg/jcr:content/metadata").getChildNodeNames()));
+        assertEquals(1, IterableUtils.size(getLatestNode("test/book.jpg/jcr:content/metadata").getChildNodeNames()));
         assertEquals(1, ds.queryPaths.size());
     }
 
@@ -476,7 +473,7 @@ public class DocumentBundlingTest {
 
         ds.reset();
         NodeState book = getLatestNode("test/book.jpg");
-        assertEquals(0, Iterables.size(book.getChildNodeNames()));
+        assertEquals(0, IterableUtils.size(book.getChildNodeNames()));
         assertEquals(0, book.getChildNodeCount(100));
         assertThat(ds.queryPaths, is(empty()));
 
@@ -490,7 +487,7 @@ public class DocumentBundlingTest {
 
         book = getLatestNode("test/book.jpg");
         ds.reset();
-        assertEquals(1, Iterables.size(book.getChildNodeNames()));
+        assertEquals(1, IterableUtils.size(book.getChildNodeNames()));
         assertEquals(1, book.getChildNodeCount(100));
         assertThat(ds.queryPaths, is(empty()));
 
@@ -679,8 +676,8 @@ public class DocumentBundlingTest {
         merge(builder);
         DocumentNodeState appNode = (DocumentNodeState) getNode(store.getRoot(), "test/book.jpg");
         assertTrue(appNode.hasOnlyBundledChildren());
-        assertEquals(ImmutableSet.of("jcr:content"), appNode.getBundledChildNodeNames());
-        assertEquals(ImmutableSet.of("metadata", "renditions"),
+        assertEquals(Set.of("jcr:content"), appNode.getBundledChildNodeNames());
+        assertEquals(Set.of("metadata", "renditions"),
                 asDocumentState(appNode.getChildNode("jcr:content")).getBundledChildNodeNames());
 
         builder = store.getRoot().builder();
@@ -964,7 +961,7 @@ public class DocumentBundlingTest {
         childBuilder(builder, "/test/book.jpg").setProperty("fooBook", "bar");
         NodeState r2 = merge(builder);
 
-        final List<String> addedPropertyNames = Lists.newArrayList();
+        final List<String> addedPropertyNames = new ArrayList<>();
         r2.compareAgainstBaseState(r1, new DefaultNodeStateDiff(){
 
             @Override
@@ -1041,7 +1038,7 @@ public class DocumentBundlingTest {
 
     private static String getBundlingPath(NodeState contentNode) {
         PropertyState ps = contentNode.getProperty(DocumentBundlor.META_PROP_BUNDLING_PATH);
-        return checkNotNull(ps).getValue(Type.STRING);
+        return requireNonNull(ps).getValue(Type.STRING);
     }
 
     private static void dump(NodeState state){
@@ -1049,7 +1046,7 @@ public class DocumentBundlingTest {
     }
 
     private static List<String> childNames(NodeState state, String path){
-        return copyOf(getNode(state, path).getChildNodeNames());
+        return ListUtils.toList(getNode(state, path).getChildNodeNames());
     }
 
     static NodeBuilder newNode(String typeName){
@@ -1102,7 +1099,7 @@ public class DocumentBundlingTest {
     }
 
     private static class AssertingDiff implements NodeStateDiff {
-        private final Set<String> ignoredProps = ImmutableSet.of(
+        private final Set<String> ignoredProps = Set.of(
                 DocumentBundlor.META_PROP_PATTERN,
                 META_PROP_BUNDLED_CHILD,
                 DocumentBundlor.META_PROP_NON_BUNDLED_CHILD
